--- a/base/applications/cacls/lang/zh-HK.rc
+++ b/base/applications/cacls/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS CACLS
  * LICENSE:     LGPL-2.1-or-later (https://spdx.org/licenses/LGPL-2.1-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2007 Chaoming Tseng <jauming.tw@gmail.com>
@@ -11,29 +11,29 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
 STRINGTABLE
 BEGIN
-    IDS_HELP "顯示或修改文件嘅存取控制串列\n\n\
+    IDS_HELP "顯示或修改文件的存取控制串列\n\n\
 CACLS filename [/T] [/E] [/C] [/G user:perm [...]] [/R user [...]]\n\
                [/P user:perm [...]] [/D user [...]]\n\
    filename      顯示 ACLs。\n\
    /T            更改目前目錄及其所有子目錄\n\
-                 指定文件嘅 ACL。\n\
+                 指定文件的 ACL。\n\
    /E            編輯 ACL 而不替換。\n\
-   /C            喺出現拒絕存取錯誤時繼續。\n\
+   /C            在出現拒絕存取錯誤時繼續。\n\
    /G user:perm  賦予指定使用者存取權限。\n\
-                 perm 可以係: R  讀取\n\
+                 perm 可以是: R  讀取\n\
                               W  寫入\n\
-                              C  更改(寫入)\n\
+                              C  更改 (寫入)\n\
                               F  完全控制\n\
-   /R user       撤銷指定使用者嘅存取權限(同 /E 一齊使用時才會有效)。\n\
-   /P user:perm  更改指定使用者嘅存取權限。\n\
-                 perm 可以係: N  無\n\
+   /R user       撤銷指定使用者的存取權限 (與 /E 一齊使用時才會有效)。\n\
+   /P user:perm  更改指定使用者的存取權限。\n\
+                 perm 可以是: N  無\n\
                               R  讀取\n\
                               W  寫入\n\
-                              C  更改(寫入)\n\
+                              C  更改 (寫入)\n\
                               F  完全控制\n\
-   /D user       拒絕指定使用者嘅存取。\n\
-喺命令中可以使用通配符指定多個檔案。\n\
-您亦可以喺命令中指定多個使用者。\n\n\
+   /D user       拒絕指定使用者的存取。\n\
+在命令中可以使用通配符指定多個檔案。\n\
+您亦可以在命令中指定多個使用者。\n\n\
 縮寫:\n\
    CI - 容器繼承。\n\
         ACE會由目錄繼承。\n\
