--- a/base/applications/charmap_new/lang/zh-HK.rc
+++ b/base/applications/charmap_new/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:      ReactOS Character Map
  * LICENSE:      GPL-2.0+ (https://spdx.org/licenses/GPL-2.0+)
- * PURPOSE:      Cantonese (Hong Kong) resource file
+ * PURPOSE:      Chinese (Hong Kong) resource file
  * REFERENCES:   Chinese (Traditional) resource translation
  * TRANSLATORS:  Copyright 2011 Elton Chung <elton328@gmail.com>
  */
