--- a/base/applications/drwtsn32/lang/zh-HK.rc
+++ b/base/applications/drwtsn32/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     Dr. Watson crash reporter
  * LICENSE:     GPL-2.0+ (https://spdx.org/licenses/GPL-2.0+)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2020-2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  */
@@ -11,5 +11,5 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 STRINGTABLE
 BEGIN
     IDS_APP_TITLE "ReactOS 死機報告"
-    IDS_USER_ALERT_MESSAGE "應用程式 %ls 發生錯誤並已強制結束。有關本次錯誤嘅資訊將儲存喺︰\n\n%ls"
+    IDS_USER_ALERT_MESSAGE "應用程式 %ls 發生錯誤並已強制結束。有關這次錯誤的資訊將儲存於︰\n\n%ls"
 END
