--- a/base/applications/dxdiag/lang/zh-HK.rc
+++ b/base/applications/dxdiag/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS ReactX-Diagnostic program
  * LICENSE:     GPL-2.0+ (https://spdx.org/licenses/GPL-2.0+)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2011 Elton Chung <elton328@gmail.com>
@@ -26,8 +26,8 @@ IDD_SYSTEM_DIALOG DIALOGEX 0, 0, 462, 220
 STYLE DS_SHELLFONT | DS_CONTROL | WS_CHILD | WS_CLIPCHILDREN
 FONT 9, "新細明體"
 BEGIN
-    LTEXT "依個工具會報告安裝喺您系統的 ReactX 元件和驅動程式嘅詳細資料。", IDC_STATIC, 5, 0, 443, 17
-    LTEXT "如果您知道造成問題嘅區域，請點擊上面相應嘅標籤。否則，您可以撳［下一頁］按鈕嚟順序查看每一頁。", IDC_STATIC, 5, 15, 443, 25
+    LTEXT "這個工具會報告安裝在您系統的 ReactX 元件和驅動程式的詳細資料。", IDC_STATIC, 5, 0, 443, 17
+    LTEXT "如果您知道造成問題的區域，請點擊上面相應的標籤。否則，您可以按［下一頁］按鈕來順序查看每一頁。", IDC_STATIC, 5, 15, 443, 25
     GROUPBOX "系統資訊", IDC_STATIC, 5, 35, 452, 150, SS_RIGHT
     LTEXT "目前日期／時間：", IDC_STATIC, 70, 50, 80, 10, SS_RIGHT
     LTEXT "電腦名稱：", IDC_STATIC, 70, 60, 80, 10, SS_RIGHT
@@ -63,7 +63,7 @@ BEGIN
     RTEXT "製造商：", IDC_STATIC, 20, 20, 70, 10
     RTEXT "晶片類型：", IDC_STATIC, 20, 30, 70, 10
     RTEXT "DAC 類型：", IDC_STATIC, 20, 40, 70, 10
-    RTEXT "記憶體總計約：", IDC_STATIC, 20, 50, 70, 10
+    RTEXT "預計記憶體總量：", IDC_STATIC, 20, 50, 70, 10
     RTEXT "目前顯示模式：", IDC_STATIC, 20, 60, 70, 10
     RTEXT "顯示器：", IDC_STATIC, 20, 70, 70, 10
     EDITTEXT IDC_STATIC_ADAPTER_ID, 95, 10, 150, 10, ES_LEFT | ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP | ES_AUTOHSCROLL
@@ -153,7 +153,7 @@ BEGIN
     LTEXT "預設埠加速:", IDC_STATIC, 15, 120, 95, 17
     LTEXT "", IDC_STATIC_DEFAULT_PORT_ACCELERATION, 115, 120, 50, 10
     PUSHBUTTON "停用", IDC_BUTTON_DISABLEDMUSIC, 75, 135, 80, 14, WS_DISABLED
-    LTEXT "測試使用此埠:", IDC_STATIC, 180, 105, 100, 10
+    LTEXT "測試使用此埠：", IDC_STATIC, 180, 105, 100, 10
     LISTBOX IDC_DMUSIC_TEST_LIST, 180, 115, 180, 45, LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON "測試 DirectMusic", IDC_BUTTON_TESTDMUSIC, 370, 145, 80, 14, WS_DISABLED
     GROUPBOX "備註", IDC_STATIC, 5, 170, 452, 50
@@ -177,7 +177,7 @@ IDD_NETWORK_DIALOG DIALOGEX 0, 0, 462, 220
 STYLE DS_SHELLFONT | DS_CONTROL | WS_CHILD | WS_CLIPCHILDREN
 FONT 9, "新細明體"
 BEGIN
-    GROUPBOX "已註冊嘅 DirectPlay 服務提供者：", IDC_STATIC, 5, 0, 452, 75
+    GROUPBOX "已註冊的 DirectPlay 服務提供者：", IDC_STATIC, 5, 0, 452, 75
     CONTROL "", IDC_LIST_PROVIDER, "SysListView32", LVS_REPORT | WS_CHILD | WS_BORDER | WS_TABSTOP, 15, 12, 432, 55
     GROUPBOX "註冊 Lobbyable DirectPlay 應用程式", IDC_STATIC, 5, 77, 452, 55
     GROUPBOX "ReactX 功能", IDC_STATIC, 5, 133, 452, 35
@@ -191,11 +191,11 @@ IDD_HELP_DIALOG DIALOGEX 0, 0, 462, 220
 STYLE DS_SHELLFONT | DS_CONTROL | WS_CHILD | WS_CLIPCHILDREN
 FONT 9, "新細明體"
 BEGIN
-    LTEXT "仍然揾唔到您需要嘅資訊嗎？以下係您可以進行嘅其他操作：", IDC_STATIC, 5, 0, 300, 10
+    LTEXT "仍然找不到您需要的資訊嗎？以下是您可以進行的其他操作：", IDC_STATIC, 5, 0, 300, 10
     PUSHBUTTON "系統資訊", IDC_BUTTON_SYSINFO, 5, 20, 80, 14, WS_DISABLED
-    LTEXT "顯示附加嘅系統資訊", IDC_STATIC, 90, 23, 300, 10
+    LTEXT "顯示附加的系統資訊", IDC_STATIC, 90, 23, 300, 10
     PUSHBUTTON "重新整理率覆寫", IDC_BUTTON_DDRAW_REFRESH, 5, 40, 80, 14, WS_DISABLED
-    LTEXT "覆寫 DirectDraw 嘅重新整理率", IDC_STATIC, 90, 43, 300, 10
+    LTEXT "覆寫 DirectDraw 的重新整理率", IDC_STATIC, 90, 43, 300, 10
 END
 
 STRINGTABLE
@@ -215,7 +215,7 @@ BEGIN
     IDS_VERSION_UNKNOWN "未知版本"
     IDS_DEVICE_STATUS_ATTACHED "已連接"
     IDS_DEVICE_STATUS_MISSING "已中斷連接"
-    IDS_DEVICE_STATUS_UNKNOWN "未知"
+    IDS_DEVICE_STATUS_UNKNOWN "不明"
     IDS_DEVICE_NAME "裝置名稱"
     IDS_DEVICE_STATUS "狀態"
     IDS_DEVICE_CONTROLLER "控制器識別碼"
@@ -239,18 +239,18 @@ BEGIN
     IDS_REG_SUCCESS "確認"
     IDS_REG_FAIL "錯誤"
     IDS_DDTEST_ERROR "測試失敗！"
-    IDS_DDTEST_DESCRIPTION "即將啟動 DirectDraw 界面測試。要繼續？"
-    IDS_DDPRIMARY_DESCRIPTION "依個測試將使用 DirectDraw 在主要表面上繪圖。您應會看見黑色和白色嘅矩形。要繼續？"
-    IDS_DDPRIMARY_RESULT "您睇到黑色同白色嘅矩形嗎？"
-    IDS_DDOFFSCREEN_DESCRIPTION "依個測試將使用 DirectDraw 在幕外表面上繪圖。您應會看見正在移動嘅白色矩形。要繼續？"
-    IDS_DDOFFSCREEN_RESULT "您睇到移動中嘅白色矩形嗎？"
-    IDS_DDFULLSCREEN_DESCRIPTION "依個測試將使用 DirectDraw 在全螢幕模式繪圖。您應會看見正在移動嘅白色矩形。要繼續？"
-    IDS_DDFULLSCREEN_RESULT "您喺全螢幕模式中睇到移動中嘅白色矩形嗎？"
+    IDS_DDTEST_DESCRIPTION "即將啟動 DirectDraw 界面測試。要繼續嗎？"
+    IDS_DDPRIMARY_DESCRIPTION "這個測試將使用 DirectDraw 在主要表面上繪圖。您應會看見黑色和白色的矩形。要繼續嗎？"
+    IDS_DDPRIMARY_RESULT "您看到黑色和白色的矩形嗎？"
+    IDS_DDOFFSCREEN_DESCRIPTION "這個測試將使用 DirectDraw 在幕外表面上繪圖。您應會看見正在移動的白色矩形。要繼續嗎？"
+    IDS_DDOFFSCREEN_RESULT "您看到移動中的白色矩形嗎？"
+    IDS_DDFULLSCREEN_DESCRIPTION "這個測試將使用 DirectDraw 在全螢幕模式繪圖。您應會看見正在移動的白色矩形。要繼續嗎？"
+    IDS_DDFULLSCREEN_RESULT "您在全螢幕模式中看到移動中的白色矩形嗎？"
     IDS_FORMAT_ADAPTER_MEM "%u MB"
     IDS_FORMAT_ADAPTER_MODE "%d x %d (%u bit)(%uHz)"
     IDS_OPTION_NO "否"
-    IDS_D3DTEST_DESCRIPTION "即將啟動 Direct3D 界面測試。要繼續？"
-    IDS_D3DTEST_D3Dx "依個測試將使用硬體加速嘅 Direct3D %u 界面。"
+    IDS_D3DTEST_DESCRIPTION "即將啟動 Direct3D 界面測試。要繼續嗎？"
+    IDS_D3DTEST_D3Dx "這個測試將使用硬體加速的 Direct3D %u 界面。"
     IDS_OS_VERSION "%s %s (%d.%d, Build %d)"
     IDS_DMUSIC_DESC "描述"
     IDS_DMUSIC_TYPE "類型"
@@ -259,5 +259,5 @@ BEGIN
     IDS_DMUSIC_DLS "支援 DLS"
     IDS_DMUSIC_EXT "外部"
     IDS_DMUSIC_PORT "預設埠"
-    IDS_DDDISABLE_MSG "咁會停用 DirectDraw 所有嘅顯示裝置上嘅所有硬體加速。\n您要繼續嗎？\n"
+    IDS_DDDISABLE_MSG "這會停用 DirectDraw 所有顯示裝置上的所有硬體加速。\n您要繼續嗎？\n"
 END
