--- a/base/applications/games/solitaire/lang/zh-HK.rc
+++ b/base/applications/games/solitaire/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS Solitaire
  * LICENSE:     Freeware, permission to use under Public Domain
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2011 Elton Chung <elton328@gmail.com>
@@ -56,7 +56,7 @@ END
 STRINGTABLE
 BEGIN
     IDS_SOL_NAME "接龍"
-    IDS_SOL_ABOUT "接龍由 J Brown 開發\n\nCardLib 版本 1.0."
+    IDS_SOL_ABOUT "接龍由 J Brown 開發\n\nCardLib 版本 1.0。"
     IDS_SOL_QUIT "退出目前遊戲？"
     IDS_SOL_WIN "恭喜您，您贏咗！！"
     IDS_SOL_DEAL "再玩一次？"
