--- a/base/applications/kbswitch/lang/zh-HK.rc
+++ b/base/applications/kbswitch/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS KBSwitch
  * LICENSE:     GPL-2.0+ (https://spdx.org/licenses/GPL-2.0+)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2011 Elton Chung <elton328@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  */
