--- a/base/applications/mscutils/servman/lang/zh-HK.rc
+++ b/base/applications/mscutils/servman/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS Services Manager
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
@@ -35,19 +35,19 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "內容(&R)...", ID_PROP, GRAYED
     END
-    POPUP "查看"
+    POPUP "檢視(&V)"
     BEGIN
-        MENUITEM "大圖示", ID_VIEW_LARGE
-        MENUITEM "小圖示", ID_VIEW_SMALL
-        MENUITEM "清單", ID_VIEW_LIST
-        MENUITEM "詳細資訊", ID_VIEW_DETAILS
+        MENUITEM "大圖示(&G)", ID_VIEW_LARGE
+        MENUITEM "小圖示(&M)", ID_VIEW_SMALL
+        MENUITEM "清單(&L)", ID_VIEW_LIST
+        MENUITEM "詳細資訊(&D)", ID_VIEW_DETAILS
         MENUITEM SEPARATOR
-        MENUITEM "自訂...", ID_VIEW_CUST, GRAYED
+        MENUITEM "自訂(&U)...", ID_VIEW_CUST, GRAYED
     END
     POPUP "説明"
     BEGIN
-        MENUITEM "説明內容", ID_HELP
-        MENUITEM "關於", ID_ABOUT
+        MENUITEM "説明內容(&H)", ID_HELP
+        MENUITEM "關於(&A)", ID_ABOUT
     END
 END
 
@@ -98,7 +98,7 @@ BEGIN
     LTEXT "啟動類型：", IDC_STATIC, 6, 108, 53, 11
     LTEXT "服務狀態：", IDC_STATIC, 4, 138, 53, 11
     LTEXT "", IDC_SERV_STATUS, 70, 138, 176, 11, WS_CHILD | WS_VISIBLE
-    LTEXT "你可以喺依度指定當你喺呢度啟動該服務時所應用嘅參數。", IDC_STATIC, 6, 177, 240, 15
+    LTEXT "您可以在這裡指定您在這裡啟動該服務時所套用的參數。", IDC_STATIC, 6, 177, 240, 15
     LTEXT "啟動參數：", IDC_STATIC, 6, 200, 58, 11
     EDITTEXT IDC_START_PARAM, 68, 199, 178, 13, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "編輯", IDC_EDIT, 192, 215, 54, 15, WS_DISABLED
@@ -109,9 +109,9 @@ CAPTION "登入"
 FONT 9, "新細明體", 0, 0
 STYLE DS_SHELLFONT | WS_BORDER | WS_VISIBLE | WS_DLGFRAME | WS_SYSMENU | WS_GROUP | WS_TABSTOP
 BEGIN
-    LTEXT "登入為:", IDC_STATIC, 7, 7, 238, 8
-    AUTORADIOBUTTON "本機身份帳戶(&L)", IDC_LOGON_SYSTEMACCOUNT, 7, 22, 238, 10, BS_TOP | BS_MULTILINE | WS_CHILD | WS_VISIBLE | WS_GROUP | WS_TABSTOP
-    AUTORADIOBUTTON "依個帳戶(&T)：", IDC_LOGON_THISACCOUNT, 7, 52, 60, 10, BS_TOP | BS_MULTILINE | WS_CHILD | WS_VISIBLE
+    LTEXT "登入為：", IDC_STATIC, 7, 7, 238, 8
+    AUTORADIOBUTTON "本機身份帳户(&L)", IDC_LOGON_SYSTEMACCOUNT, 7, 22, 238, 10, BS_TOP | BS_MULTILINE | WS_CHILD | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+    AUTORADIOBUTTON "這個帳户(&T)：", IDC_LOGON_THISACCOUNT, 7, 52, 60, 10, BS_TOP | BS_MULTILINE | WS_CHILD | WS_VISIBLE
     AUTOCHECKBOX "允許服務與桌面互動(&W)", IDC_LOGON_INTERACTIVE, 18, 34, 227, 10, WS_CHILD | WS_VISIBLE | WS_GROUP | WS_TABSTOP | BS_TOP | BS_MULTILINE
     EDITTEXT IDC_LOGON_ACCOUNTNAME, 72, 50, 103, 14, ES_LEFT | ES_AUTOHSCROLL | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_GROUP | WS_TABSTOP
     PUSHBUTTON "瀏覽(&B)...", IDC_LOGON_SEARCH, 185, 50, 60, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
@@ -130,17 +130,17 @@ CAPTION "還原"
 FONT 9, "新細明體", 0, 0
 STYLE DS_SHELLFONT | WS_BORDER | WS_VISIBLE | WS_DLGFRAME | WS_SYSMENU | WS_GROUP | WS_TABSTOP
 BEGIN
-    LTEXT "選取電腦喺依個服務失敗時嘅回應。", IDC_STATIC, 7, 7, 238, 8
+    LTEXT "選取電腦在這個服務失敗時的回應。", IDC_STATIC, 7, 7, 238, 8
     LTEXT "第一次失敗時(&F)：", IDC_STATIC, 7, 24, 92, 8
     COMBOBOX IDC_FIRST_FAILURE, 104, 22, 141, 147, WS_CHILD | WS_VISIBLE | WS_TABSTOP | CBS_DROPDOWNLIST
     LTEXT "第二次失敗時(&S)：", IDC_STATIC, 7, 41, 92, 8
     COMBOBOX IDC_SECOND_FAILURE, 104, 39, 141, 147, WS_CHILD | WS_VISIBLE | WS_TABSTOP | CBS_DROPDOWNLIST
-    LTEXT "Subsequent failures:", IDC_STATIC, 7, 58, 92, 8
+    LTEXT "之後的每一次失敗：", IDC_STATIC, 7, 58, 92, 8
     COMBOBOX IDC_SUBSEQUENT_FAILURES, 104	, 56, 141, 147, WS_CHILD | WS_VISIBLE | WS_TABSTOP | CBS_DROPDOWNLIST
-    LTEXT "喺以下時間後重設失敗計數(&O)：", IDC_STATIC, 7, 75, 72, 8
+    LTEXT "在以下時間後重設失敗計數(&O)：", IDC_STATIC, 7, 75, 72, 8
     EDITTEXT IDC_RESET_TIME, 104, 73, 40, 13, WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP | ES_LEFT | ES_AUTOHSCROLL | ES_NUMBER
     LTEXT "日", IDC_STATIC, 150, 75, 95, 8
-    LTEXT "喺以下時間後重新啟動服務(&V)：", IDC_RESTART_TEXT1, 7, 92, 92, 8
+    LTEXT "在以下時間後重新啟動服務(&V)：", IDC_RESTART_TEXT1, 7, 92, 92, 8
     EDITTEXT IDC_RESTART_TIME, 104, 90, 40, 13, WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP | ES_LEFT | ES_AUTOHSCROLL | ES_NUMBER
     LTEXT "分鐘", IDC_RESTART_TEXT2, 150, 92, 95, 8
     GROUPBOX "執行程式", IDC_RUN_GROUPBOX, 7, 108, 238, 80
@@ -164,8 +164,8 @@ BEGIN
     CONTROL "", IDC_DEPEND_TREE2, "SysTreeView32", WS_BORDER | WS_CHILDWINDOW |
             WS_VISIBLE | WS_TABSTOP | TVS_HASBUTTONS | TVS_HASLINES |
             TVS_LINESATROOT | TVS_DISABLEDRAGDROP, 8, 151, 236, 68
-    LTEXT "一啲服務依賴於其他服務，系統驅動程式和載入順序組。如果一個系統元件被停止或者沒有正確運行，被其依賴嘅服務也會被影響。", IDC_STATIC, 8, 7, 238, 26
-    LTEXT "依個服務依賴於以下嘅元件：", IDC_STATIC, 8, 57, 236, 9
+    LTEXT "一些服務依賴於其他服務，系統驅動程式和載入順序組。如果一個系統元件被停止或者沒有正確執行，依賴它的服務也會受到影響。", IDC_STATIC, 8, 7, 238, 26
+    LTEXT "這個服務依賴於以下的元件：", IDC_STATIC, 8, 57, 236, 9
     LTEXT "", IDC_DEPEND_SERVICE, 8, 38, 236, 13
 END
 
@@ -185,7 +185,7 @@ BEGIN
     LTEXT "描述：", IDC_STATIC, 12, 86, 44, 9
     PUSHBUTTON "確定", IDOK, 126, 192, 44, 13
     PUSHBUTTON "取消", IDCANCEL, 176, 192, 46, 13
-    LTEXT "附加選項（撳［説明］以獲得詳細資訊）", IDC_STATIC, 10, 151, 134, 9
+    LTEXT "附加選項（按［説明］以取得詳細資訊）", IDC_STATIC, 10, 151, 134, 9
     PUSHBUTTON "説明", ID_CREATE_HELP, 10, 192, 44, 13
 END
 
@@ -195,7 +195,7 @@ FONT 9, "新細明體", 0, 0
 STYLE DS_SHELLFONT | WS_BORDER | WS_DLGFRAME | DS_MODALFRAME
 BEGIN
     ICON IDI_WARNING, IDC_STATIC, 10, 8, 24, 22
-    LTEXT "您確定要刪除以下嘅服務嗎？您唔可以撤銷依個操作！", IDC_STATIC, 50, 6, 125, 25
+    LTEXT "您確定要刪除以下的服務嗎？您將不能撤銷這個操作！", IDC_STATIC, 50, 6, 125, 25
     LTEXT "服務名稱：", IDC_STATIC, 6, 40, 80, 9
     LTEXT "", IDC_DEL_NAME, 15, 53, 160, 15
     EDITTEXT IDC_DEL_DESC, 6, 73, 174, 48, WS_CHILD | WS_VISIBLE | WS_VSCROLL |
@@ -212,7 +212,7 @@ BEGIN
     ICON IDI_WARNING, IDC_STATIC, 10, 8, 24, 22
     LTEXT "", IDC_STOP_DEPENDS, 40, 8, 170, 25
     LISTBOX IDC_STOP_DEPENDS_LB, 15, 40, 210, 70, WS_CHILD | WS_VISIBLE | WS_EX_STATICEDGE | LBS_NOSEL
-    LTEXT "您確定要停止依啲服務？", IDC_STATIC, 15, 110, 150, 10
+    LTEXT "您確定要停止這些服務？", IDC_STATIC, 15, 110, 150, 10
     DEFPUSHBUTTON "是", IDOK, 60, 129, 54, 14
     PUSHBUTTON "否", IDCANCEL, 120, 129, 54, 14
 END
@@ -258,7 +258,7 @@ END
 STRINGTABLE
 BEGIN
     IDS_NUM_SERVICES "服務總數：%d"
-    IDS_STOP_DEPENDS "當 %s 停止時，依啲服務亦將被停止"
+    IDS_STOP_DEPENDS "當 %s 停止時，這些服務亦會停止"
     IDS_NO_DEPENDS "<沒有依賴>"
 END
 
@@ -267,8 +267,8 @@ BEGIN
     IDS_TOOLTIP_PROP "內容"
     IDS_TOOLTIP_REFRESH "重新整理"
     IDS_TOOLTIP_EXPORT "匯出清單"
-    IDS_TOOLTIP_CREATE "建立一個新嘅服務"
-    IDS_TOOLTIP_DELETE "刪除一個已存在嘅服務"
+    IDS_TOOLTIP_CREATE "建立一個新的服務"
+    IDS_TOOLTIP_DELETE "刪除一個已存在的服務"
     IDS_TOOLTIP_START "啟動服務"
     IDS_TOOLTIP_STOP "停止服務"
     IDS_TOOLTIP_PAUSE "暫停服務"
@@ -283,8 +283,8 @@ BEGIN
     IDS_PROGRESS_INFO_RESUME "ReactOS 正在嘗試恢復以下服務"
     IDS_CREATE_SUCCESS "成功建立服務"
     IDS_DELETE_SUCCESS "成功刪除服務"
-    IDS_CREATE_REQ "標記有\n星號（*）嘅欄位係必需嘅"
-    IDS_DELETE_STOP "您必須喺刪除該服務前停止它！"
+    IDS_CREATE_REQ "標記有\n星號（*）的欄位是必需的"
+    IDS_DELETE_STOP "您必須在刪除該服務前停止它！"
 END
 
 STRINGTABLE
@@ -297,31 +297,31 @@ STRINGTABLE
 BEGIN
     IDS_HINT_BLANK " "
     IDS_HINT_EXPORT " 將目前服務清單匯出為一個檔案。"
-    IDS_HINT_EXIT " 結束依個程式。"
-    IDS_HINT_CONNECT " 管理一台不同嘅電腦。"
-    IDS_HINT_START " 啟動選定嘅服務。"
-    IDS_HINT_STOP " 停止選定嘅服務。"
-    IDS_HINT_PAUSE " 暫停選定嘅服務。"
-    IDS_HINT_RESUME " 恢復選定嘅服務。"
-    IDS_HINT_RESTART " 停止然後啟動選定嘅服務。"
+    IDS_HINT_EXIT " 結束這個程式。"
+    IDS_HINT_CONNECT " 管理一台不同的電腦。"
+    IDS_HINT_START " 啟動選定的服務。"
+    IDS_HINT_STOP " 停止選定的服務。"
+    IDS_HINT_PAUSE " 暫停選定的服務。"
+    IDS_HINT_RESUME " 恢復選定的服務。"
+    IDS_HINT_RESTART " 停止然後啟動選定的服務。"
     IDS_HINT_REFRESH " 重新整理服務清單。"
-    IDS_HINT_EDIT " 編輯選定服務嘅屬性。"
-    IDS_HINT_CREATE " 創建一個新嘅服務。"
-    IDS_HINT_DELETE " 刪除選定嘅服務。"
-    IDS_HINT_PROP " 為目前選擇嘅專案開啟內容頁。"
+    IDS_HINT_EDIT " 編輯選定服務的內容。"
+    IDS_HINT_CREATE " 建立一個新的服務。"
+    IDS_HINT_DELETE " 刪除選定的服務。"
+    IDS_HINT_PROP " 為目前選擇的專案開啟內容頁。"
     IDS_HINT_LARGE " 用大圖示顯示條目。"
     IDS_HINT_SMALL " 用小圖示顯示條目。"
     IDS_HINT_LIST " 用清單顯示條目。"
-    IDS_HINT_DETAILS " 在視窗中顯示每個條目嘅資訊。"
+    IDS_HINT_DETAILS " 在視窗中顯示每個條目的資訊。"
     IDS_HINT_CUST " 自訂視圖。"
     IDS_HINT_HELP " 顯示説明視窗。"
     IDS_HINT_ABOUT " 關於 ReactOS 服務管理員。"
-    IDS_HINT_SYS_RESTORE " 將依個視窗恢復到普通大小。"
-    IDS_HINT_SYS_MOVE " 移動依個視窗。"
-    IDS_HINT_SYS_SIZE " 調整依個視窗嘅大小。"
-    IDS_HINT_SYS_MINIMIZE " 將依個視窗折疊為一個圖示。"
-    IDS_HINT_SYS_MAXIMIZE " 將依個視窗擴展到整個螢幕。"
-    IDS_HINT_SYS_CLOSE " 關閉依個視窗。"
+    IDS_HINT_SYS_RESTORE " 將這個視窗恢復到普通大小。"
+    IDS_HINT_SYS_MOVE " 移動這個視窗。"
+    IDS_HINT_SYS_SIZE " 調整這個視窗的大小。"
+    IDS_HINT_SYS_MINIMIZE " 將這個視窗折疊為一個圖示。"
+    IDS_HINT_SYS_MAXIMIZE " 將這個視窗擴展至整個螢幕。"
+    IDS_HINT_SYS_CLOSE " 關閉這個視窗。"
 END
 
 /* Application title */
@@ -342,5 +342,5 @@ END
 STRINGTABLE
 BEGIN
     IDS_NOT_SAME_PASSWORD "密碼不相符！"
-    IDS_INVALID_PASSWORD "請輸入有效嘅密碼！"
+    IDS_INVALID_PASSWORD "請輸入有效的密碼！"
 END
