--- a/base/applications/mstsc/lang/zh-HK.rc
+++ b/base/applications/mstsc/lang/zh-HK.rc
@@ -1,10 +1,10 @@
 /*
  * PROJECT:     ReactOS Remote Desktop Client
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
- *              Copyright Elton Chung aka MfldElton <elton328@gmail.com>
+ *              Copyright 2015 Elton Chung <elton328@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
@@ -16,7 +16,7 @@ BEGIN
     GROUPBOX "登入設定", IDC_STATIC, 7, 7, 228, 89
     GROUPBOX "連接設定", IDC_STATIC, 7, 103, 228, 65
     ICON "", IDC_LOGONICON, 15, 19, 20, 20
-    LTEXT "輸入伺服器地址。", IDC_STATIC, 47, 24, 81, 8
+    LTEXT "輸入伺服器位址。", IDC_STATIC, 47, 24, 81, 8
     LTEXT "伺服器(&S)：", IDC_STATIC, 47, 41, 25, 8
     LTEXT "使用者名稱(&U)：", IDC_STATIC, 47, 58, 38, 8
     COMBOBOX IDC_SERVERCOMBO, 79, 39, 141, 13, CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -25,7 +25,7 @@ BEGIN
     PUSHBUTTON "另存新檔(&V)...", IDC_SAVEAS, 123, 139, 50, 14
     PUSHBUTTON "開啟(&E)...", IDC_OPEN, 177, 139, 50, 14
     ICON "", IDC_CONNICON, 16, 114, 20, 20
-    LTEXT "儲存目前連接設定或開啟一個已有嘅配置", IDC_STATIC, 50, 115, 172, 20
+    LTEXT "儲存目前連線設定或開啟一個現有配置", IDC_STATIC, 50, 115, 172, 20
 END
 
 IDD_DISPLAY DIALOGEX 0, 0, 242, 175
@@ -36,7 +36,7 @@ BEGIN
     GROUPBOX "顏色(&C)", IDC_STATIC, 7, 83, 228, 85
     ICON "", IDC_REMICON, 15, 19, 20, 20
     ICON "", IDC_COLORSICON, 15, 98, 20, 20
-    LTEXT "為您嘅遠端桌面設定螢幕大小。將依個滑塊向右拉遠嚟啟用全螢幕。", IDC_STATIC, 53, 22, 175, 21
+    LTEXT "為您的遠端桌面設定螢幕大小。將這個滑塊向右拉遠來啟用全螢幕。", IDC_STATIC, 53, 22, 175, 21
     CONTROL "", IDC_GEOSLIDER, "msctls_trackbar32", TBS_AUTOTICKS | WS_TABSTOP, 56, 42, 124, 17
     COMBOBOX IDC_BPPCOMBO, 56, 102, 128, 80, CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
     CONTROL "", IDC_COLORIMAGE, "Static", SS_OWNERDRAW | SS_SUNKEN, 56, 121, 127, 10
