--- a/base/applications/notepad/lang/zh-HK.rc
+++ b/base/applications/notepad/lang/zh-HK.rc
@@ -1,10 +1,10 @@
 /*
  * PROJECT:     ReactOS Notepad
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
- *              Copyright anonymous contributors
+ *              Copyright 2015 Alvin Wong <alvinhochun@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
@@ -33,7 +33,7 @@ BEGIN
     POPUP "檔案(&F)"
     BEGIN
         MENUITEM "開新檔案(&N)\tCtrl+N", CMD_NEW
-        MENUITEM "新視窗(&W)\tCtrl+Shift+N", CMD_NEW_WINDOW
+        MENUITEM "開新視窗(&W)\tCtrl+Shift+N", CMD_NEW_WINDOW
         MENUITEM "開啟舊檔(&O)...\tCtrl+O", CMD_OPEN
         MENUITEM "儲存檔案(&S)\tCtrl+S", CMD_SAVE
         MENUITEM "另存新檔(&A)...", CMD_SAVE_AS
@@ -58,7 +58,7 @@ BEGIN
         MENUITEM "跳到(&G)...\tCtrl+G", CMD_GOTO
         MENUITEM SEPARATOR
         MENUITEM "全選(&A)\tCtrl+A", CMD_SELECT_ALL
-        MENUITEM "插入時間/日期(&T)\tF5", CMD_TIME_DATE
+        MENUITEM "插入時間／日期(&T)\tF5", CMD_TIME_DATE
     END
     POPUP "格式(&O)"
     BEGIN
@@ -158,13 +158,13 @@ BEGIN
     STRING_NOTEXT "沒有輸入文字。\n\
 請輸入文字後再試一次。"
     STRING_DOESNOTEXIST "「%s」檔案不存在。\n\
-要開新檔案嗎？"
+是否要開新檔案？"
     STRING_NOTSAVED "「%s」檔案已被修改。\n\
-係咪要儲存呢啲變更？"
-    STRING_NOTFOUND "揾唔到檔案「%s」"
-    STRING_OUT_OF_MEMORY "冇足夠記憶體進行依個操作。\n\
-請關閉一啲程式以增加可用記憶體，然後再重試一次。"
-    STRING_CANNOTFIND "揾唔到「%s」"
+是否要儲存這些變更？"
+    STRING_NOTFOUND "找不到檔案「%s」"
+    STRING_OUT_OF_MEMORY "沒有足夠記憶體進行這個操作。\n\
+請關閉一些程式來增加可用記憶體，然後再試一次。"
+    STRING_CANNOTFIND "找不到「%s」"
     STRING_ANSI "ANSI"
     STRING_UNICODE "Unicode"
     STRING_UNICODE_BE "Unicode (big endian)"
@@ -174,7 +174,7 @@ BEGIN
     STRING_CR "Mac (CR)"
     STRING_LINE_COLUMN "第 %d 行，第 %d 字元"
     STRING_PRINTERROR "「%s」檔案列印失敗。\n\
-請檢查印表機係咪已經開機同正確設定。"
+請檢查印表機是否已經開機及正確設定。"
 
     STRING_TEXT_DOCUMENT "純文字檔案"
     STRING_NOTEPAD_AUTHORS "Copyright 1997,98 Marcel Baur, 2000 Mike McCormack, 2002 Sylvain Petreolle, 2002 Andriy Palamarchuk\r\n"
