--- a/base/applications/rapps/lang/zh-HK.rc
+++ b/base/applications/rapps/lang/zh-HK.rc
@@ -1,5 +1,11 @@
-/* Translated by Song Fuchang (0xfc) <sfc_0@yahoo.com.cn>
- * Translation improved by Chan Chilung <eason066@gmail.com> */
+/*
+ * PROJECT:     ReactOS ReactOS Applications Manager
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2020-2021 Chan Chilung <eason066@gmail.com> 
+ * REFERENCES:  Chinese (Traditional) resource translation
+ *              Copyright 2011 Song Fuchang (0xfc) <sfc_0@yahoo.com.cn>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -34,7 +40,7 @@ IDR_LINKMENU MENU
 BEGIN
     POPUP "popup"
     BEGIN
-        MENUITEM "喺瀏覽器中開啟連結(&O)", ID_OPEN_LINK
+        MENUITEM "在瀏覽器中開啟連結(&O)", ID_OPEN_LINK
         MENUITEM "複製連結到剪貼簿(&C)", ID_COPY_LINK
     END
 END
@@ -62,23 +68,23 @@ FONT 9, "新細明體"
 BEGIN
     GROUPBOX "一般", -1, 4, 2, 240, 61
     AUTOCHECKBOX "儲存視窗位置(&S)", IDC_SAVE_WINDOW_POS, 15, 12, 219, 12
-    AUTOCHECKBOX "啟動時更新可獲得嘅程式列表(&U)", IDC_UPDATE_AVLIST, 15, 29, 222, 12
-    AUTOCHECKBOX "將程式嘅安裝和解除安裝記錄到記錄檔(&L)", IDC_LOG_ENABLED, 15, 46, 219, 12
+    AUTOCHECKBOX "啟動時更新可獲得的程式列表(&U)", IDC_UPDATE_AVLIST, 15, 29, 222, 12
+    AUTOCHECKBOX "將程式的安裝和解除安裝記錄到記錄檔(&L)", IDC_LOG_ENABLED, 15, 46, 219, 12
     GROUPBOX "正在下載", -1, 4, 65, 240, 51
-    LTEXT "下載資料夾:", -1, 16, 75, 100, 9
+    LTEXT "下載資料夾：", -1, 16, 75, 100, 9
     EDITTEXT IDC_DOWNLOAD_DIR_EDIT, 15, 86, 166, 12, WS_CHILD | WS_VISIBLE | WS_GROUP | ES_AUTOHSCROLL
     PUSHBUTTON "選擇(&C)", IDC_CHOOSE, 187, 85, 50, 14
-    AUTOCHECKBOX "喺程式完成安裝後刪除安裝程式(&D)", IDC_DEL_AFTER_INSTALL, 16, 100, 218, 12
-    GROUPBOX "指定軟件列表源", -1, 4, 118, 240, 46
+    AUTOCHECKBOX "在程式完成安裝後刪除安裝程式(&D)", IDC_DEL_AFTER_INSTALL, 16, 100, 218, 12
+    GROUPBOX "指定軟件列表來源", -1, 4, 118, 240, 46
     CONTROL "使用預設來源", IDC_SOURCE_DEFAULT, "Button", BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP, 15, 132, 74, 10
-    CONTROL "指定軟件列表源", IDC_USE_SOURCE, "Button", BS_AUTORADIOBUTTON | WS_TABSTOP, 15, 147, 74, 10
+    CONTROL "使用指定來源", IDC_USE_SOURCE, "Button", BS_AUTORADIOBUTTON | WS_TABSTOP, 15, 147, 74, 10
     EDITTEXT IDC_SOURCE_URL, 97, 147, 140, 12, ES_AUTOHSCROLL | WS_DISABLED
     GROUPBOX "代理伺服器", -1, 4, 166, 240, 76
     CONTROL "使用系統代理設定", IDC_PROXY_DEFAULT, "Button", BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP, 15, 180, 210, 10
     CONTROL "直接（無代理）", IDC_NO_PROXY, "Button", BS_AUTORADIOBUTTON | WS_TABSTOP, 15, 195, 210, 10
     CONTROL "代理伺服器", IDC_USE_PROXY, "Button", BS_AUTORADIOBUTTON | WS_TABSTOP, 15, 210, 71, 10
     EDITTEXT IDC_PROXY_SERVER, 90, 210, 147, 12, ES_AUTOHSCROLL | WS_DISABLED
-    LTEXT "唔使用代理嘅情況", -1, 25, 226, 64, 10
+    LTEXT "不使用代理的情況", -1, 25, 226, 64, 10
     EDITTEXT IDC_NO_PROXY_FOR, 90, 225, 147, 12, ES_AUTOHSCROLL | WS_DISABLED
     PUSHBUTTON "預設", IDC_DEFAULT_SETTINGS, 8, 245, 60, 14
     DEFPUSHBUTTON "確定", IDOK, 116, 245, 60, 14
@@ -91,7 +97,7 @@ CAPTION "安裝程式"
 FONT 9, "新細明體"
 BEGIN
     LTEXT "…", IDC_INSTALL_TEXT, 4, 5, 209, 35
-    AUTORADIOBUTTON "從儲存裝置安裝 (CD 或 DVD)(&I)", IDC_CD_INSTALL, 10, 46, 197, 11, WS_GROUP
+    AUTORADIOBUTTON "從儲存裝置安裝（CD 或 DVD）(&I)", IDC_CD_INSTALL, 10, 46, 197, 11, WS_GROUP
     AUTORADIOBUTTON "下載並安裝(&D)", IDC_DOWNLOAD_INSTALL, 10, 59, 197, 11, NOT WS_TABSTOP
     DEFPUSHBUTTON "確定", IDOK, 86, 78, 60, 14
     PUSHBUTTON "取消", IDCANCEL, 150, 78, 60, 14
@@ -189,31 +195,31 @@ BEGIN
     IDS_MODIFY "修改"
     IDS_APPS_COUNT "程式數量：%d； 已選：%d"
     IDS_WELCOME_TITLE "歡迎來到 ReactOS 程式管理員！\n\n"
-    IDS_WELCOME_TEXT "從左側欄目選擇一個類別，然後選擇要安裝或解除安裝嘅程式。\nReactOS 網站︰"
+    IDS_WELCOME_TEXT "從左側欄目選擇一個類別，然後選擇要安裝或解除安裝的程式。\nReactOS 網站︰"
     IDS_WELCOME_URL "https://reactos.org/"
     IDS_INSTALLED "已安裝"
     IDS_AVAILABLEFORINST "可安裝"
     IDS_UPDATES "更新"
     IDS_APPLICATIONS "應用程式"
-    IDS_CHOOSE_FOLDER_TEXT "請選擇用來儲存下載檔案嘅資料夾︰"
-    IDS_CHOOSE_FOLDER_ERROR "您選擇嘅資料夾唔存在。要建立嗎？"
-    IDS_URL_INVALID "您指定嘅 URL 無效或唔支援。請更正！"
-    IDS_APP_REG_REMOVE "您確定要從登錄檔刪除該程式嘅資料嗎？"
+    IDS_CHOOSE_FOLDER_TEXT "請選擇用來儲存下載檔案的資料夾︰"
+    IDS_CHOOSE_FOLDER_ERROR "您選擇的資料夾不存在。要建立嗎？"
+    IDS_URL_INVALID "您指定的 URL 無效或不支援。請更正！"
+    IDS_APP_REG_REMOVE "您確定要從登錄檔刪除該程式的資料嗎？"
     IDS_INFORMATION "資訊"
-    IDS_UNABLE_TO_DOWNLOAD "無法下載軟件套件！揾唔到網絡位址！"
-    IDS_UNABLE_TO_DOWNLOAD2 "無法下載軟件套件！請檢查網絡連接！"
-    IDS_UNABLE_TO_REMOVE "無法從登錄檔刪除該程式嘅資料！"
+    IDS_UNABLE_TO_DOWNLOAD "無法下載軟件套件！找不到網絡位址！"
+    IDS_UNABLE_TO_DOWNLOAD2 "無法下載軟件套件！請檢查網絡連線！"
+    IDS_UNABLE_TO_REMOVE "無法從登錄檔刪除該程式的資料！"
     IDS_UNABLE_TO_INSTALL "無法打開安裝程式！"
-    IDS_UNABLE_TO_QUERY_CERT "無法獲取證書資訊。\n\n您是否仍要繼續？"
-    IDS_INTEG_CHECK_TITLE "驗證軟件套件嘅完整性…"
-    IDS_INTEG_CHECK_FAIL "套件未通過完整性檢查，它可能已損壞，或者喺下載過程中篡改。建議您唔好執行嗰個軟體。"
-    IDS_INTERRUPTED_DOWNLOAD "下載中斷。請檢查網絡連接。"
+    IDS_UNABLE_TO_QUERY_CERT "無法取得證書資訊。\n\n您是否仍要繼續？"
+    IDS_INTEG_CHECK_TITLE "驗證軟件套件的完整性..."
+    IDS_INTEG_CHECK_FAIL "套件未通過完整性檢查，它可能已損壞，或在下載過程中篡改。建議您不要執行該軟件。"
+    IDS_INTERRUPTED_DOWNLOAD "下載中斷。請檢查網絡連線。"
     IDS_UNABLE_TO_WRITE "無法寫入儲存裝置。儲存裝置可能已滿。"
-    IDS_SELECT_ALL "全選/ 全反選"
+    IDS_SELECT_ALL "全選／全反選"
     IDS_INSTALL_SELECTED "安裝已選中軟件"
     IDS_SELECTEDFORINST "選中以安裝"
-    IDS_MISMATCH_CERT_INFO "使用了不明嘅證書：\n主題：%s\n發行方：%s\n您是否仍然要繼續？"
-    IDS_UNABLE_PATH "唔正確嘅 URL 格式。"
+    IDS_MISMATCH_CERT_INFO "使用了不明的證書：\n主題：%s\n發行方：%s\n您是否仍然要繼續？"
+    IDS_UNABLE_PATH "不正確的 URL 格式。"
     IDS_APP_DISPLAY_DETAILS "詳情"
     IDS_APP_DISPLAY_LIST "列表"
     IDS_APP_DISPLAY_TILE "卡片"
@@ -235,17 +241,17 @@ STRINGTABLE
 BEGIN
     IDS_LICENSE_OPENSOURCE "開源軟件"
     IDS_LICENSE_FREEWARE "免費軟件"
-    IDS_LICENSE_TRIAL "試用版/演示版"
+    IDS_LICENSE_TRIAL "試用版／演示版"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_LANGUAGE_AVAILABLE_TRANSLATION "支援您嘅語言"
+    IDS_LANGUAGE_AVAILABLE_TRANSLATION "支援您的語言"
     IDS_LANGUAGE_NO_TRANSLATION "支援其他語言"
     IDS_LANGUAGE_ENGLISH_TRANSLATION "支援英語"
     IDS_LANGUAGE_SINGLE "單語言"
-    IDS_LANGUAGE_MORE_PLACEHOLDER " (+%d 及更多)"
-    IDS_LANGUAGE_AVAILABLE_PLACEHOLDER " (+%d 可用)"
+    IDS_LANGUAGE_MORE_PLACEHOLDER " （+%d 及更多）"
+    IDS_LANGUAGE_AVAILABLE_PLACEHOLDER " （+%d 可用）"
 END
 
 STRINGTABLE
@@ -261,8 +267,8 @@ BEGIN
     IDS_CMD_NEED_PACKAGE_NAME "錯誤：選項 %1 需要一個或多個軟件套件名稱。\n"
     IDS_CMD_NEED_FILE_NAME "錯誤：選項 %1 需要一個檔案名稱。\n"
     IDS_CMD_NEED_PARAMS "錯誤：選項 %1 需要一個或多個參數。\n"
-    IDS_CMD_INVALID_OPTION "錯誤：指定了未知或錯誤嘅命令行參數。\n"
-    IDS_CMD_FIND_RESULT_FOR "%1 嘅搜尋結果：\n"
-    IDS_CMD_PACKAGE_NOT_FOUND "揾唔到軟件套件 %1。\n"
-    IDS_CMD_PACKAGE_INFO "有關軟件套件 %1 嘅資訊：\n"
+    IDS_CMD_INVALID_OPTION "錯誤：指定了未知或錯誤的命令列參數。\n"
+    IDS_CMD_FIND_RESULT_FOR "%1 的搜尋結果：\n"
+    IDS_CMD_PACKAGE_NOT_FOUND "無法找到軟件套件 %1。\n"
+    IDS_CMD_PACKAGE_INFO "有關軟件套件 %1 的資訊：\n"
 END
