--- a/base/applications/screensavers/3dtext/lang/zh-HK.rc
+++ b/base/applications/screensavers/3dtext/lang/zh-HK.rc
@@ -1,4 +1,9 @@
-/* Translated by Elton Chung aka MfldElton <elton328@gmail.com> */
+/*
+ * PROJECT:     OpenGL 3DText ScreenSaver
+ * LICENSE:     Public Domain
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2011 Elton Chung <elton328@gmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
