--- a/base/applications/sndrec32/lang/zh-HK.rc
+++ b/base/applications/sndrec32/lang/zh-HK.rc
@@ -1,10 +1,10 @@
 /*
  * PROJECT:    ReactOS Sound Recorder
- * LICENSE:    GPL - See COPYING in the top level directory
- * FILE:       base/applications/sndrec32/lang/zh-HK.rc
+ * LICENSE:    GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
  * PURPOSE:    Chinese (Hong Kong) resource file
- * TRANSLATOR: Elton Chung aka MfldElton <elton328@gmail.com>
- *             Chan Chilung <eason066@gmail.com>
+ * TRANSLATOR: Copyright 2021 Chan Chilung <eason066@gmail.com>
+ * REFERNECE:  Chinese (Traditional) resource translation
+ *             Copyright Elton Chung <elton328@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
@@ -37,20 +37,20 @@ BEGIN
         MENUITEM "插入檔案(&I)...", ID_EDIT_INSERTFILE
         MENUITEM "與檔案混合(&M)...", ID_EDIT_MIXFILE
         MENUITEM SEPARATOR
-        MENUITEM "刪除目前位置之前嘅內容(&B)",ID_EDIT_DELETEBEFORE, GRAYED
-        MENUITEM "刪除目前位置之後嘅內容(&A)",ID_EDIT_DELETEAFTER, GRAYED
+        MENUITEM "刪除目前位置之前的內容(&B)",ID_EDIT_DELETEBEFORE, GRAYED
+        MENUITEM "刪除目前位置之後的內容(&A)",ID_EDIT_DELETEAFTER, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "音訊內容(&U)", ID_EDIT_AUDIOPROPS
     END
     POPUP "效果(&S)"
     BEGIN
-        MENUITEM "調高音量 (25%)(&I)", ID_EFFECTS_INCVOL
+        MENUITEM "調高音量（25%）(&I)", ID_EFFECTS_INCVOL
         MENUITEM "減小音量(&D)", ID_EFFECTS_DECVOL
         MENUITEM SEPARATOR
-        MENUITEM "增加速度 (100%)(&I)", ID_EFFECTS_INCSPD
+        MENUITEM "增加速度（100%）(&I)", ID_EFFECTS_INCSPD
         MENUITEM "降低速度(&D)", ID_EFFECTS_DECSPD
         MENUITEM SEPARATOR
-        MENUITEM "添加回音(&A)", ID_EFFECTS_ECHO
+        MENUITEM "新增回音(&A)", ID_EFFECTS_ECHO
         MENUITEM "反轉(&R)", ID_EFFECTS_REVERSE
     END
     POPUP "說明(&?)"
