--- a/base/applications/taskmgr/lang/zh-HK.rc
+++ b/base/applications/taskmgr/lang/zh-HK.rc
@@ -1,9 +1,9 @@
 /*
- * PROJECT:    ReactOS Task Manager
- * LICENSE:    GPL - See COPYING in the top level directory
- * FILE:       base/applications/taskmgr/lang/zh-HK.rc
- * PURPOSE:    Chinese (Hong Kong) Language File for taskmgr
- * TRANSLATOR: Elton Chung aka MfldElton <elton328@gmail.com>
+ * PROJECT:     ReactOS Task Manager
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2011 Elton Chung <elton328@gmail.com>
+ *              Copyright 2021 Chan Chilung <eason066@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
@@ -12,9 +12,9 @@ IDR_TASKMANAGER MENU
 BEGIN
     POPUP "檔案(&F)"
     BEGIN
-        MENUITEM "新工作(執行...)(&N)", ID_FILE_NEW
+        MENUITEM "新工作（執行...）(&N)", ID_FILE_NEW
         MENUITEM SEPARATOR
-        MENUITEM "退出工作管理員(&X)", ID_FILE_EXIT
+        MENUITEM "結束工作管理員(&X)", ID_FILE_EXIT
     END
     POPUP "選項(&O)"
     BEGIN
@@ -40,8 +40,8 @@ BEGIN
         MENUITEM "選擇欄位(&S)...", ID_VIEW_SELECTCOLUMNS
         POPUP "CPU 記錄(&C)"
         BEGIN
-            MENUITEM "所有 CPU 一個圖形(&O)", ID_VIEW_CPUHISTORY_ONEGRAPHALL
-            MENUITEM "每個 CPU 一個圖形(&P)", ID_VIEW_CPUHISTORY_ONEGRAPHPERCPU, CHECKED
+            MENUITEM "所有 CPU 處理成一個圖形(&O)", ID_VIEW_CPUHISTORY_ONEGRAPHALL
+            MENUITEM "每個 CPU 處理成一個圖形(&P)", ID_VIEW_CPUHISTORY_ONEGRAPHPERCPU, CHECKED
         END
         MENUITEM "顯示核心程式時間(&S)", ID_VIEW_SHOWKERNELTIMES
     END
@@ -59,7 +59,7 @@ BEGIN
         MENUITEM "待機(&B)",                  ID_SHUTDOWN_STANDBY
         MENUITEM "休眠(&H)",                 ID_SHUTDOWN_HIBERNATE
         MENUITEM "關閉電源(&U)",                  ID_SHUTDOWN_POWEROFF
-        MENUITEM "重新開機(&R)",                   ID_SHUTDOWN_REBOOT
+        MENUITEM "重新啟動(&R)",                   ID_SHUTDOWN_REBOOT
         MENUITEM "登出 %s (&L)",                ID_SHUTDOWN_LOGOFF
         MENUITEM "切換使用者(&S)\tWinKey+L",     ID_SHUTDOWN_SWITCHUSER, GRAYED
         MENUITEM "鎖定電腦(&K)\tWinKey+L",   ID_SHUTDOWN_LOCKCOMPUTER
@@ -88,7 +88,7 @@ IDR_APPLICATION_PAGE_CONTEXT1 MENU
 BEGIN
     POPUP "DUMMY"
     BEGIN
-        MENUITEM "新工作(執行...)(&N)", ID_FILE_NEW
+        MENUITEM "新工作（執行...）(&N)", ID_FILE_NEW
         MENUITEM SEPARATOR
         MENUITEM "大圖示(&G)", ID_VIEW_LARGE
         MENUITEM "小圖示(&M)", ID_VIEW_SMALL
@@ -178,7 +178,7 @@ BEGIN
     CONTROL "List2", IDC_PROCESSLIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL |
             LVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP, 7, 7, 233, 177
     PUSHBUTTON "結束處理程序(&E)", IDC_ENDPROCESS, 171, 189, 69, 14
-    CONTROL "顯示所有使用者嘅處理程序(&S)", IDC_SHOWALLPROCESSES, "Button",
+    CONTROL "顯示所有使用者的處理程序(&S)", IDC_SHOWALLPROCESSES, "Button",
             BS_AUTOCHECKBOX | WS_TABSTOP, 7, 191, 111, 10
 END
 
@@ -239,7 +239,7 @@ END
 
 IDD_DEBUG_CHANNELS_DIALOG DIALOGEX 0, 0, 247, 210
 STYLE DS_SHELLFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "調試頻道"
+CAPTION "偵錯頻道"
 FONT 9, "新細明體"
 BEGIN
     CONTROL "List2", IDC_DEBUG_CHANNELS_LIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL |
@@ -254,7 +254,7 @@ FONT 9, "新細明體"
 BEGIN
     DEFPUSHBUTTON "確定", IDOK, 120, 133, 50, 14
     PUSHBUTTON "取消", IDCANCEL, 174, 133, 50, 14
-    LTEXT "處理器親和性設定控制程序允許喺哪個處理器上執行。", IDC_STATIC, 5, 5, 220, 16
+    LTEXT "處理器親和性設定控制處理程序允許在指定處理器上執行。", IDC_STATIC, 5, 5, 220, 16
     CONTROL "CPU 0", IDC_CPU0, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 11, 28, 37, 10
     CONTROL "CPU 1", IDC_CPU1, "Button", BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP, 11, 41, 37, 10
     CONTROL "CPU 2", IDC_CPU2, "Button", BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP, 11, 54, 37, 10
@@ -296,9 +296,9 @@ FONT 9, "新細明體"
 BEGIN
     DEFPUSHBUTTON "確定", IDOK, 84, 178, 50, 14
     PUSHBUTTON "取消", IDCANCEL, 138, 178, 50, 14
-    LTEXT "請選擇「工作管理員」處理程序頁上將顯示嘅欄位。", IDC_STATIC, 7, 7, 181, 17
+    LTEXT "請選擇「工作管理員」處理程序頁上將顯示的欄位。", IDC_STATIC, 7, 7, 181, 17
     CONTROL "映像名稱(&I)", IDC_IMAGENAME, "Button", BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP, 7, 28, 56, 10
-    CONTROL "PID (處理程序識別碼)(&P)", IDC_PID, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 7, 39, 88, 10
+    CONTROL "PID（處理程序識別碼）(&P)", IDC_PID, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 7, 39, 88, 10
     CONTROL "CPU 使用(&C)", IDC_CPUUSAGE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 7, 50, 53, 10
     CONTROL "CPU 時間(&E)", IDC_CPUTIME, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 7, 61, 48, 10
     CONTROL "記憶體使用(&M)", IDC_MEMORYUSAGE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 7, 72, 63, 10
@@ -336,14 +336,14 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_FILE_NEW "新程序"
-    ID_OPTIONS_ALWAYSONTOP "工作管理員仍然是所有其他視窗嘅前面，除非最小化"
-    ID_OPTIONS_MINIMIZEONUSE "工作管理員最小化執行 SwitchTo 操作時"
-    ID_OPTIONS_HIDEWHENMINIMIZED "隱藏工作管理員當它最小化時"
+    ID_FILE_NEW "執行新程式"
+    ID_OPTIONS_ALWAYSONTOP "除非工作管理員最小化，否則留在其他視窗的最前面"
+    ID_OPTIONS_MINIMIZEONUSE "在執行 SwitchTo 操作時將工作管理員最小化"
+    ID_OPTIONS_HIDEWHENMINIMIZED "當最小化時隱藏工作管理員"
     ID_VIEW_REFRESH "強制工作管理員立即更新，忽略更新速度設置"
     ID_VIEW_LARGE "用大圖示顯示任務"
     ID_VIEW_SMALL "用小圖示顯示任務"
-    ID_VIEW_DETAILS "顯示有關每個任務嘅資訊"
+    ID_VIEW_DETAILS "顯示有關每個任務的資訊"
     ID_VIEW_UPDATESPEED_HIGH "每秒更新兩次"
     ID_VIEW_UPDATESPEED_NORMAL "每兩秒更新一次"
     ID_VIEW_UPDATESPEED_LOW "每四秒更新一次"
@@ -352,38 +352,38 @@ END
 STRINGTABLE
 BEGIN
     ID_VIEW_UPDATESPEED_PAUSED "不自動更新"
-    ID_WINDOWS_TILEHORIZONTALLY "視窗喺桌面上水準平鋪"
-    ID_WINDOWS_TILEVERTICALLY "視窗喺桌面上垂直平鋪"
+    ID_WINDOWS_TILEHORIZONTALLY "視窗在桌面上水準平鋪"
+    ID_WINDOWS_TILEVERTICALLY "視窗在桌面上垂直平鋪"
     ID_WINDOWS_MINIMIZE "最小化視窗"
     ID_WINDOWS_MAXIMIZE "最大化視窗"
-    ID_WINDOWS_CASCADE "層疊對角桌面上嘅視窗"
-    ID_WINDOWS_BRINGTOFRONT "將視窗前置，但不能切換到它"
+    ID_WINDOWS_CASCADE "層疊對角桌面上的視窗"
+    ID_WINDOWS_BRINGTOFRONT "將視窗前置，但不切換到該視窗"
     ID_HELP_TOPICS "顯示工作管理員説明主題"
-    ID_HELP_ABOUT "顯示程式資訊、 版本號和版權資訊"
-    ID_FILE_EXIT "退出工作管理員應用程式"
-    ID_OPTIONS_SHOW16BITTASKS "顯示關聯 ntvdm.exe 下嘅 16 位任務"
-    ID_VIEW_SELECTCOLUMNS "選擇哪一列將可見嘅處理序頁"
-    ID_VIEW_SHOWKERNELTIMES "喺績效圖中顯示核心程式嘅時間"
-    ID_VIEW_CPUHISTORY_ONEGRAPHALL "單一歷史記錄圖表顯示出總嘅 CPU 使用率"
-    ID_VIEW_CPUHISTORY_ONEGRAPHPERCPU "每個 CPU 都有其自身嘅歷史圖"
-    ID_APPLICATION_PAGE_SWITCHTO "帶來嘅前景，將焦點切換到該任務嘅任務"
+    ID_HELP_ABOUT "顯示程式資訊、版本號和版權資訊"
+    ID_FILE_EXIT "結束工作管理員應用程式"
+    ID_OPTIONS_SHOW16BITTASKS "顯示關聯 ntvdm.exe 下的 16 位任務"
+    ID_VIEW_SELECTCOLUMNS "在處理程序頁選擇要顯示的欄位"
+    ID_VIEW_SHOWKERNELTIMES "在效能圖中顯示核心程式的時間"
+    ID_VIEW_CPUHISTORY_ONEGRAPHALL "單歷程記錄圖顯示 CPU 的總使用率"
+    ID_VIEW_CPUHISTORY_ONEGRAPHPERCPU "每個 CPU 都有它自己的歷程記錄圖"
+    ID_APPLICATION_PAGE_SWITCHTO "將工作前置，並將焦點放在該工作上"
 END
 
 STRINGTABLE
 BEGIN
-    ID_ENDTASK "告訴要關閉所選嘅任務"
-    ID_GOTOPROCESS "將焦點切換到所選任務嘅過程"
-    ID_RESTORE "從其隱藏狀態恢復工作管理員"
-    ID_PROCESS_PAGE_ENDPROCESS "從系統中刪除嘅過程"
-    ID_PROCESS_PAGE_ENDPROCESSTREE "從系統中刪除此處理序及其所有子體"
-    ID_PROCESS_PAGE_DEBUG "將調試器附加到該處理序"
-    ID_PROCESS_PAGE_SETAFFINITY "控制程序允許喺哪個處理器運行"
-    ID_PROCESS_PAGE_SETPRIORITY_REALTIME "設定程序優先順序為即時"
-    ID_PROCESS_PAGE_SETPRIORITY_HIGH "設定程序優先順序為高"
-    ID_PROCESS_PAGE_SETPRIORITY_ABOVENORMAL "設定程序優先順序為喺標準以上"
-    ID_PROCESS_PAGE_SETPRIORITY_NORMAL "設定程序優先順序為標準"
-    ID_PROCESS_PAGE_SETPRIORITY_BELOWNORMAL "設定程序優先順序為喺標準以下"
-    ID_PROCESS_PAGE_SETPRIORITY_LOW "設定程序優先順序為低"
+    ID_ENDTASK "告訴要關閉所選的任務"
+    ID_GOTOPROCESS "將焦點切換到所選任務的處理程序"
+    ID_RESTORE "將工作管理員從隱藏狀態恢復"
+    ID_PROCESS_PAGE_ENDPROCESS "從系統中刪除的處理程序"
+    ID_PROCESS_PAGE_ENDPROCESSTREE "從系統中刪除此處理程序及其所有子體"
+    ID_PROCESS_PAGE_DEBUG "將偵錯器附加到該處理程序"
+    ID_PROCESS_PAGE_SETAFFINITY "控制處理程序允許在哪個處理器執行"
+    ID_PROCESS_PAGE_SETPRIORITY_REALTIME "設定處理程序優先順序為即時"
+    ID_PROCESS_PAGE_SETPRIORITY_HIGH "設定處理程序優先順序為高"
+    ID_PROCESS_PAGE_SETPRIORITY_ABOVENORMAL "設定處理程序優先順序為高於標準"
+    ID_PROCESS_PAGE_SETPRIORITY_NORMAL "設定處理程序優先順序為標準"
+    ID_PROCESS_PAGE_SETPRIORITY_BELOWNORMAL "設定處理程序優先順序為低於標準"
+    ID_PROCESS_PAGE_SETPRIORITY_LOW "設定處理程序優先順序為低"
 END
 
 STRINGTABLE
@@ -421,31 +421,31 @@ BEGIN
     IDS_TAB_COMMANDLINE "命令列"
     IDS_MENU_SELECTCOLUMNS "選擇列(&S)..."
     IDS_MENU_16BITTASK "顯示 16 位工作(&S)"
-    IDS_MENU_WINDOWS "窗口(&W)"
+    IDS_MENU_WINDOWS "視窗(&W)"
     IDS_MENU_LARGEICONS "大圖示(&G)"
     IDS_MENU_SMALLICONS "小圖示(&M)"
-    IDS_MENU_DETAILS "詳細(&D)"
-    IDS_MENU_ONEGRAPHALLCPUS "所有 CPU 一個圖形(&O)"
-    IDS_MENU_ONEGRAPHPERCPU "每個 CPU 一個圖形(&P)"
+    IDS_MENU_DETAILS "詳細資料(&D)"
+    IDS_MENU_ONEGRAPHALLCPUS "所有 CPU 處理成一個圖形(&O)"
+    IDS_MENU_ONEGRAPHPERCPU "每個 CPU 處理成一個圖形(&P)"
     IDS_MENU_CPUHISTORY "CPU 使用記錄(&C)"
     IDS_MENU_SHOWKERNELTIMES "顯示核心時間(&S)"
     IDS_CREATENEWTASK "新工作"
-    IDS_CREATENEWTASK_DESC "工作管理員將根據您所輸入嘅名稱，為您開啟相應嘅程式、資料夾、檔案或網路資源。"
+    IDS_CREATENEWTASK_DESC "工作管理員將根據您所輸入的名稱，為您開啟相應的程式、資料夾、檔案或網絡資源。"
     IDS_MSG_ACCESSPROCESSAFF "無法存取或設定處理器親和性"
     IDS_MSG_PROCESSONEPRO "程序必須連繫至少一個處理器。"
     IDS_MSG_INVALIDOPTION "選項無效"
-    IDS_MSG_UNABLEDEBUGPROCESS "無法傾印程式"
-    IDS_MSG_WARNINGDEBUG "警告: 傾印此程式可能導致資料遺失。\n你是否確定要繼續？"
+    IDS_MSG_UNABLEDEBUGPROCESS "無法傾印處理程序"
+    IDS_MSG_WARNINGDEBUG "警告: 傾印此處理程序可能導致資料遺失。\n你是否確定要繼續？"
     IDS_MSG_TASKMGRWARNING "工作管理員警告"
-    IDS_MSG_WARNINGTERMINATING "警告: 結束程序可能導政資料遺失或系統不穩定。\n程序喺結束時將不能儲存任何資料。\n你是否確定要繼續？"
+    IDS_MSG_WARNINGTERMINATING "警告：結束處理程序可能導致資料遺失或系統不穩定。\n程序在結束時將不能儲存任何資料。\n你確定要繼續嗎？"
     IDS_MSG_UNABLETERMINATEPRO "無法結束處理程序"
-    IDS_MSG_CLOSESYSTEMPROCESS "這是一個關鍵嘅系統過程。工作管理員不會結束這一處理序。"
+    IDS_MSG_CLOSESYSTEMPROCESS "這是一個關鍵的系統處理程序。工作管理員不會結束這個處理程序。"
     IDS_MSG_UNABLECHANGEPRIORITY "無法更改優先順序"
-    IDS_MSG_WARNINGCHANGEPRIORITY "警告: 更改此程序嘅優先順序可能導致系統不穩定。\n你是否確定要更改優先順序？"
-    IDS_MSG_TRAYICONCPUUSAGE "CPU 使用情況: %d%%"
-    IDS_STATUS_MEMUSAGE "記憶體使用情況: %s / %s (%d%%)"
-    IDS_STATUS_CPUUSAGE "CPU 使用情況: %3d%%"
-    IDS_STATUS_PROCESSES "處理程序: %d"
+    IDS_MSG_WARNINGCHANGEPRIORITY "警告: 更改此處理程序的優先順序可能導致系統不穩定。\n你確定要更改優先順序嗎？"
+    IDS_MSG_TRAYICONCPUUSAGE "CPU 使用情況： %d%%"
+    IDS_STATUS_MEMUSAGE "記憶體使用情況: %s ／ %s (%d%%)"
+    IDS_STATUS_CPUUSAGE "CPU 使用情況： %3d%%"
+    IDS_STATUS_PROCESSES "處理程序： %d"
     IDS_NOT_RESPONDING "沒有回應"
-    IDS_RUNNING "正在運行"
+    IDS_RUNNING "正在執行"
 END
