--- a/base/applications/utilman/lang/zh-HK.rc
+++ b/base/applications/utilman/lang/zh-HK.rc
@@ -10,6 +10,6 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
 STRINGTABLE
 BEGIN
-    IDS_FAIL_INIT "無法初始化 Utility Manager library！錯誤碼︰%lu."
+    IDS_FAIL_INIT "無法初始化 Utility Manager library！錯誤碼︰%lu。"
     IDS_FAIL_INIT_TITLE "初始化失敗"
 END
