--- a/base/setup/reactos/lang/zh-HK.rc
+++ b/base/setup/reactos/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS Setup Wizard
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2020-2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
@@ -16,7 +16,7 @@ CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
     LTEXT "歡迎使用 ReactOS 安裝程式精靈", IDC_STARTTITLE, 115, 8, 195, 24
-    LTEXT "您目前唔可以直接從依個 CD 安裝 ReactOS！\n請重新開機並從 CD 啟動您嘅電腦以安裝 ReactOS。", IDC_STATIC, 115, 40, 195, 100
+    LTEXT "您目前不能直接從這個 CD 安裝 ReactOS！\n請重新開機並從 CD 啟動您的電腦以安裝 ReactOS。", IDC_STATIC, 115, 40, 195, 100
     LTEXT "按［完成］退出安裝程式。", IDC_STATIC, 115, 169, 195, 17
 END
 
@@ -26,9 +26,9 @@ CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
     AUTORADIOBUTTON "安裝 ReactOS", IDC_INSTALL, 7, 7, 277, 10, WS_GROUP | WS_TABSTOP
-    LTEXT "安裝 ReactOS 嘅新副本。依個選項唔會儲存您嘅檔案、設定和程式。您可以對磁碟和磁碟區進行更改。", IDC_INSTALLTEXT, 18, 18, 269, 25, NOT WS_GROUP
+    LTEXT "安裝 ReactOS 的新副本。這個選項不會儲存您的檔案、設定和程式。您可以對磁碟和磁碟區進行更改。", IDC_INSTALLTEXT, 18, 18, 269, 25, NOT WS_GROUP
     AUTORADIOBUTTON "修復或更新已安裝的 ReactOS", IDC_UPDATE, 7, 50, 277, 10
-    LTEXT "更新或修復已安裝的 ReactOS 副本。依個選項會儲存您的檔案、設定及程式。只有喺 ReactOS 已經安裝在呢個電腦時先可以用依個選項。", IDC_UPDATETEXT, 18, 61, 269, 30, NOT WS_GROUP
+    LTEXT "更新或修復已安裝的 ReactOS 副本。這個選項會儲存您的檔案、設定及程式。只有在 ReactOS 已經安裝在此電腦時才可使用這個選項。", IDC_UPDATETEXT, 18, 61, 269, 30, NOT WS_GROUP
     LTEXT "按［下一步］繼續安裝。", IDC_STATIC, 7, 128, 297, 8
 END
 
@@ -37,10 +37,10 @@ STYLE DS_SHELLFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYS
 CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
-    LTEXT       "ReactOS 安裝程式可以升級下面其中一個可用嘅 ReactOS 安裝。如果某個 ReactOS 安裝損毀，安裝程式可以嘗試修復佢。", IDC_STATIC, 6, 6, 300, 18
+    LTEXT       "ReactOS 安裝程式可以升級下面其中一個可用的 ReactOS 安裝。如果某個 ReactOS 安裝損毀，安裝程式可以嘗試修復它。", IDC_STATIC, 6, 6, 300, 18
     CONTROL     "", IDC_NTOSLIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP, 6, 30, 303, 90
     PUSHBUTTON  "不要升級(&D)", IDC_SKIPUPGRADE, 230, 128, 80, 14
-    LTEXT       "撳［下一步］升級已選擇嘅 ReactOS 安裝，或者撳［不要升級］進行全新嘅 ReactOS 安裝。", IDC_STATIC, 7, 124, 222, 16
+    LTEXT       "按［下一步］升級已選擇的 ReactOS 安裝，或按［不要升級］進行全新的 ReactOS 安裝。", IDC_STATIC, 7, 124, 222, 16
 END
 
 IDD_DEVICEPAGE DIALOGEX 0, 0, 317, 143
@@ -54,7 +54,7 @@ BEGIN
     CONTROL "", IDC_DISPLAY, "ComboBox", WS_VSCROLL | WS_TABSTOP | CBS_DROPDOWNLIST, 100, 35, 180, 80
     LTEXT "鍵盤：", IDC_STATIC, 20, 55, 80, 10
     CONTROL "", IDC_KEYBOARD, "ComboBox", WS_VSCROLL | WS_TABSTOP | CBS_DROPDOWNLIST, 100, 55, 180, 80
-    LTEXT "撳［下一步］設定要安裝嘅磁碟機。", IDC_STATIC, 7, 128, 297, 8
+    LTEXT "按［下一步］設定要安裝的磁碟機。", IDC_STATIC, 7, 128, 297, 8
 END
 
 IDD_DRIVEPAGE DIALOGEX 0, 0, 317, 143
@@ -122,9 +122,9 @@ BEGIN
     EDITTEXT IDC_DESTDRIVE, 95, 76, 210, 13, ES_READONLY | ES_AUTOHSCROLL | WS_VISIBLE | NOT WS_BORDER | NOT WS_TABSTOP
     LTEXT "目的地路徑：", IDC_STATIC, 18, 89, 74, 11
     EDITTEXT IDC_PATH, 95, 88, 210, 13, ES_READONLY | ES_AUTOHSCROLL | WS_VISIBLE | NOT WS_BORDER | NOT WS_TABSTOP
-    AUTOCHECKBOX "我確定所有嘅安裝設定正確。\n我亦明白 ReactOS 目前處於 Alpha 測試階段，有可能損壞電腦或導致我嘅資料損毀。",
+    AUTOCHECKBOX "我確定所有的安裝設定正確。\n我亦明白 ReactOS 目前處於 Alpha 測試階段，有可能損壞電腦或導致我的資料損毀。",
         IDC_CONFIRM_INSTALL, 7, 104, 303, 18, BS_MULTILINE
-    LTEXT "請確定所有嘅安裝設定正確，\n然後撳［安裝］，開始安裝程序。", IDC_STATIC, 7, 124, 303, 18
+    LTEXT "請確定所有的安裝設定正確，\n然後按［安裝］，開始安裝程序。", IDC_STATIC, 7, 124, 303, 18
 END
 
 IDD_PROCESSPAGE DIALOGEX 0, 0, 317, 143
@@ -143,10 +143,10 @@ CAPTION "正在完成 ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
     LTEXT "正在完成 ReactOS 安裝程式", IDC_FINISHTITLE, 115, 8, 195, 24
-    LTEXT "ReactOS 嘅第一階段安裝已順利完成。", IDC_STATIC, 20, 50, 277, 10
-    LTEXT "當撳咗［完成］後，您嘅電腦將會重新啟動。", IDC_STATIC, 20, 80, 277, 10
+    LTEXT "ReactOS 的第一階段安裝已順利完成。", IDC_STATIC, 20, 50, 277, 10
+    LTEXT "當按下［完成］後，您的電腦將會重新啟動。", IDC_STATIC, 20, 80, 277, 10
     CONTROL "", IDC_RESTART_PROGRESS, "msctls_progress32", PBS_SMOOTH | WS_CHILD | WS_VISIBLE | WS_BORDER, 20, 120, 277, 8
-    LTEXT "如果光碟機入面仲有光碟，請將其取出。然後咗［完成］，重新啟動您嘅電腦。", IDC_STATIC, 10, 180, 297, 20
+    LTEXT "如果光碟機內仍然有光碟，請將其取出。然後按［完成］，重新啟動您的電腦。", IDC_STATIC, 10, 180, 297, 20
 END
 
 STRINGTABLE
@@ -163,9 +163,9 @@ BEGIN
     IDS_RESTARTSUBTITLE "第一階段安裝已經完成，重新啟動進行第二階段安裝"
     IDS_SUMMARYTITLE "安裝概要"
     IDS_SUMMARYSUBTITLE "安裝前列出安裝屬性以供檢查"
-    IDS_ABORTSETUP "ReactOS 仲未完全安裝到您嘅電腦上。如果您依家退出安裝程式，您需要重新執行安裝程式嚟安裝 ReactOS。您確定退出嗎？"
-    IDS_ABORTSETUP2 "終止安裝?"
-    IDS_NO_TXTSETUP_SIF "揾唔到「txtsetup.sif」。\n安裝程式無法繼續。"
+    IDS_ABORTSETUP "ReactOS 尚未完全安裝到您的電腦上。如果您現在結束安裝程式，您需要重新執行安裝程式來安裝 ReactOS。您確定要結束嗎？"
+    IDS_ABORTSETUP2 "終止安裝？"
+    IDS_NO_TXTSETUP_SIF "找不到「txtsetup.sif」。\n安裝程式無法繼續。"
     IDS_CAPTION "ReactOS 安裝程式"
 END
 
