--- a/base/setup/welcome/lang/zh-HK.rc
+++ b/base/setup/welcome/lang/zh-HK.rc
@@ -1,7 +1,7 @@
 /*
  * PROJECT:     ReactOS welcome/autorun application
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
- * PURPOSE:     Cantonese (Hong Kong) resource file
+ * PURPOSE:     Chinese (Hong Kong) resource file
  * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
  * REFERENCES:  Chinese (Traditional) resource translation
  *              Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
@@ -16,9 +16,9 @@ STRINGTABLE
 BEGIN
     IDS_APPTITLE "ReactOS - 歡迎"
     IDS_DEFAULT_TOPIC_TITLE "ReactOS"
-    IDS_DEFAULT_TOPIC_DESC "歡迎使用 ReactOS 作業系統。\n\n 請點選左邊嘅主題。"
+    IDS_DEFAULT_TOPIC_DESC "歡迎使用 ReactOS 作業系統。\n\n 請點選左邊的主題。"
     IDS_FONTNAME "新細明體"
-    IDS_CHECKTEXT "再次顯示呢個對話方塊(&S)"
+    IDS_CHECKTEXT "再次顯示這個對話方塊(&S)"
     IDS_CLOSETEXT "結束(&Q)"
 END
 
@@ -41,7 +41,7 @@ END
 /* Topic descriptions */
 STRINGTABLE
 BEGIN
-    IDS_TOPIC_DESC0 "重新安裝 ReactOS 或更新您嘅 ReactOS 。"
+    IDS_TOPIC_DESC0 "重新安裝 ReactOS 或更新您的 ReactOS 。"
     IDS_TOPIC_DESC1 "瀏覽 CD 的內容。"
-    IDS_TOPIC_DESC2 "撳落去會結束依個應用程式。"
+    IDS_TOPIC_DESC2 "按下以結束這個應用程式。"
 END
