--- a/dll/cpl/console/lang/zh-HK.rc
+++ b/dll/cpl/console/lang/zh-HK.rc
@@ -1,5 +1,11 @@
-/* Traditional Chinese translation by Henry Tang Ih 2016 (henrytang2@hotmail.com) 
- * Translation improved by Chan Chilung 2021 (eason066@gmail.com) */
+/*
+ * PROJECT:     ReactOS Console Configuration
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2020-2021 Chan Chilung <eason066@gmail.com>
+ * REFERENCES:  Chinese (Traditional) resource translation
+ *              Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -16,15 +22,15 @@ BEGIN
     AUTORADIOBUTTON "視窗(&W)", IDC_RADIO_DISPLAY_WINDOW, 142, 20, 70, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     AUTORADIOBUTTON "全螢幕顯示(&F)", IDC_RADIO_DISPLAY_FULL, 142, 40, 70, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     GROUPBOX "命令記錄", IDC_STATIC, 7, 85, 120, 77, WS_CHILD | WS_VISIBLE | WS_GROUP
-    LTEXT "緩衝區大小(&B):", IDC_STATIC, 14, 101, 70, 12
+    LTEXT "緩衝區大小(&B)：", IDC_STATIC, 14, 101, 70, 12
     EDITTEXT IDC_EDIT_BUFFER_SIZE, 90, 97, 30, 15, ES_RIGHT | ES_NUMBER | WS_GROUP
     CONTROL "", IDC_UPDOWN_BUFFER_SIZE, UPDOWN_CLASS, UDS_SETBUDDYINT | UDS_ALIGNRIGHT |
             UDS_AUTOBUDDY | UDS_ARROWKEYS | WS_GROUP, 119, 97, 12, 15
-    LTEXT "緩衝區數量(&N):", IDC_STATIC, 14, 124, 70, 12
+    LTEXT "緩衝區數量(&N)：", IDC_STATIC, 14, 124, 70, 12
     EDITTEXT IDC_EDIT_NUM_BUFFER, 90, 120, 30, 15, ES_RIGHT | ES_NUMBER | WS_GROUP
     CONTROL "", IDC_UPDOWN_NUM_BUFFER, UPDOWN_CLASS, UDS_SETBUDDYINT | UDS_ALIGNRIGHT |
             UDS_AUTOBUDDY | UDS_ARROWKEYS | WS_GROUP, 119, 120, 12, 15
-    AUTOCHECKBOX "丟棄舊嘅副本(&D)", IDC_CHECK_DISCARD_DUPLICATES, 12, 140, 110, 15
+    AUTOCHECKBOX "丟棄舊的副本(&D)", IDC_CHECK_DISCARD_DUPLICATES, 12, 140, 110, 15
     GROUPBOX "編輯選項", IDC_STATIC, 133, 85, 112, 77, BS_GROUPBOX | WS_CHILD | WS_VISIBLE | WS_GROUP
     AUTOCHECKBOX "快速編輯模式(&Q)", IDC_CHECK_QUICK_EDIT, 140, 97, 102, 15, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     AUTOCHECKBOX "插入模式(&I)", IDC_CHECK_INSERT_MODE, 140, 113, 76, 15, WS_CHILD | WS_VISIBLE | WS_TABSTOP
@@ -47,7 +53,7 @@ BEGIN
     LTEXT "字型(&F)：", IDC_STATIC, 10, 105, 33, 10
     AUTOCHECKBOX "粗體(&B)", IDC_CHECK_BOLD_FONTS, 56, 105, 60, 10
     LISTBOX IDC_LBOX_FONTTYPE, 10, 120, 110, 40, LBS_SORT | LBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX "Selected Font", IDC_GROUPBOX_FONT_NAME, 7, 156, 240, 50
+    GROUPBOX "已選擇的字型", IDC_GROUPBOX_FONT_NAME, 7, 156, 240, 50
     CONTROL "", IDC_STATIC_SELECT_FONT_PREVIEW, "Static", SS_OWNERDRAW | SS_SUNKEN, 12, 166, 104, 35, WS_EX_CLIENTEDGE
     LTEXT "每個字元為：", IDC_STATIC, 125, 166, 85, 10
     LTEXT "螢幕像素寬度\n螢幕像素高度", IDC_STATIC, 138, 180, 100, 20
@@ -101,7 +107,7 @@ BEGIN
     AUTORADIOBUTTON "螢幕背景(&B)", IDC_RADIO_SCREEN_BACKGROUND, 10, 30, 112, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     AUTORADIOBUTTON "彈出視窗文字(&P)", IDC_RADIO_POPUP_TEXT, 10, 48, 112, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     AUTORADIOBUTTON "彈出視窗背景(&U)", IDC_RADIO_POPUP_BACKGROUND, 10, 67, 112, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
-    GROUPBOX "所選嘅顏色元件", IDC_STATIC, 129, 7, 118, 73
+    GROUPBOX "所選的顏色元件", IDC_STATIC, 129, 7, 118, 73
     LTEXT "紅(&R)：", IDC_STATIC, 140, 25, 48, 10
     EDITTEXT IDC_EDIT_COLOR_RED, 210, 22, 30, 14, ES_RIGHT | ES_NUMBER | WS_GROUP
     CONTROL "", IDC_UPDOWN_COLOR_RED, UPDOWN_CLASS, UDS_SETBUDDYINT | UDS_ALIGNRIGHT |
@@ -130,9 +136,9 @@ BEGIN
     CONTROL "", IDC_STATIC_COLOR14, "Static", SS_NOTIFY | SS_SUNKEN | SS_OWNERDRAW, 199, 90, 12, 12
     CONTROL "", IDC_STATIC_COLOR15, "Static", SS_NOTIFY | SS_SUNKEN | SS_OWNERDRAW, 213, 90, 12, 12
     CONTROL "", IDC_STATIC_COLOR16, "Static", SS_NOTIFY | SS_SUNKEN | SS_OWNERDRAW, 227, 90, 12, 12
-    GROUPBOX "預覽 (螢幕)", IDC_STATIC, 7, 111, 240, 40
+    GROUPBOX "預覽（螢幕）", IDC_STATIC, 7, 111, 240, 40
     CONTROL "", IDC_STATIC_SCREEN_COLOR, "Static", SS_OWNERDRAW | SS_SUNKEN, 15, 124, 224, 20, WS_EX_CLIENTEDGE
-    GROUPBOX "預覽 (彈出)", IDC_STATIC, 7, 162, 240, 40
+    GROUPBOX "預覽（彈出）", IDC_STATIC, 7, 162, 240, 40
     CONTROL "", IDC_STATIC_POPUP_COLOR, "Static", SS_OWNERDRAW | SS_SUNKEN, 15, 176, 224, 20, WS_EX_CLIENTEDGE
 END
 
@@ -141,17 +147,17 @@ STYLE DS_SHELLFONT | WS_POPUP | WS_CAPTION
 CAPTION "套用內容"
 FONT 9, "新細明體"
 BEGIN
-    AUTORADIOBUTTON "僅將內容套用於目前嘅視窗(&A)", IDC_RADIO_APPLY_CURRENT, 12, 12, 207, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
-    AUTORADIOBUTTON "將內容套用於以後具有相同標題嘅視窗(&S)", IDC_RADIO_APPLY_ALL, 12, 31, 207, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    AUTORADIOBUTTON "只將內容套用於目前的視窗(&A)", IDC_RADIO_APPLY_CURRENT, 12, 12, 207, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    AUTORADIOBUTTON "將內容套用於以後具有相同標題的視窗(&S)", IDC_RADIO_APPLY_ALL, 12, 31, 207, 10, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "確定", IDOK, 58, 58, 50, 14, WS_VISIBLE
     PUSHBUTTON "取消", IDCANCEL, 114, 58, 50, 14, WS_VISIBLE
 END
 
 STRINGTABLE
 BEGIN
-    IDS_CPLNAME "控制台"
-    IDS_CPLDESCRIPTION "設定控制台屬性。"
-    IDS_APPLY_SHORTCUT_ALL "修改啟動依個視窗嘅捷徑(&S)"
+    IDS_CPLNAME "主控台"
+    IDS_CPLDESCRIPTION "設定主控台內容。"
+    IDS_APPLY_SHORTCUT_ALL "修改啟動這個視窗的捷徑(&S)"
     IDS_RASTERFONTS "Raster 字型"
-    IDS_GROUPBOX_FONT_NAME "已選擇嘅字型: "
+    IDS_GROUPBOX_FONT_NAME "已選擇的字型： "
 END
