--- a/dll/cpl/joy/lang/zh-HK.rc
+++ b/dll/cpl/joy/lang/zh-HK.rc
@@ -1,5 +1,11 @@
-/* Traditional Chinese translation by Henry Tang Ih 2016 (henrytang2@hotmail.com) 
- * Translation improved by Chan Chilung 2021 (eason066@gmail.com) */
+/*
+ * PROJECT:     ReactOS Joystick Properties Control Panel Applet
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2020-2021 Chan Chilung <eason066@gmail.com>
+ * REFERENCES:  Chinese (Traditional) resource translation
+ *              Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -10,7 +16,7 @@ CAPTION "遊戲控制器"
 FONT 9, "新細明體"
 BEGIN
     ICON IDI_CPLSYSTEM, -1, 7, 7, 20, 20
-    LTEXT "呢啲設定幫助您配置安裝在電腦上嘅遊戲控制器。", -1, 33, 7, 214, 20, NOT WS_GROUP
+    LTEXT "這些設定幫助您配置安裝在電腦上的遊戲控制器。", -1, 33, 7, 214, 20, NOT WS_GROUP
     GROUPBOX "安裝遊戲控制器(&N)", -1, 7, 34, 238, 117
     CONTROL "List1", IDC_CONTROLLER_LIST, "SysListView32", WS_BORDER | WS_GROUP | WS_TABSTOP | 0x0000808D, 14, 44, 224, 80
     PUSHBUTTON "新增(&A)...", IDC_ADD_BUTTON, 35, 129, 65, 14
@@ -28,11 +34,11 @@ CAPTION "新增遊戲控制器"
 FONT 9, "新細明體"
 BEGIN
     ICON IDI_CPLSYSTEM, -1, 8, 7, 20, 20
-    LTEXT "請喺下面列表中選擇遊戲控制器並按 [確定]。如果您嘅遊戲控制器不喺列表中，請按 [自訂]。", -1, 35, 7, 210, 33
-    LTEXT "遊戲控制器(&G):", -1, 8, 45, 126, 8
+    LTEXT "請在下面列表中選擇遊戲控制器並按［確定］。如果您的遊戲控制器不在列表中，請按［自訂］。", -1, 35, 7, 210, 33
+    LTEXT "遊戲控制器(&G)：", -1, 8, 45, 126, 8
     LISTBOX IDC_GAME_CONTROLLERS_LIST, 7, 55, 251, 57, LBS_STANDARD | LBS_NOINTEGRALHEIGHT | LBS_WANTKEYBOARDINPUT | WS_HSCROLL | WS_TABSTOP
     AUTOCHECKBOX "啟用方向舵和腳踏板(&E)", IDC_ENABLE_RUDDERS_CHECKBOX, 7, 114, 100, 10, WS_GROUP
-    LTEXT "遊戲埠(&G):", -1, 7, 134, 38, 8, NOT WS_VISIBLE
+    LTEXT "遊戲埠(&G)：", -1, 7, 134, 38, 8, NOT WS_VISIBLE
     COMBOBOX IDC_GAME_PORT_COMBO, 7, 147, 140, 50, CBS_DROPDOWNLIST | CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL
     PUSHBUTTON "自訂(&C)...", IDC_CUSTOM_BUTTON, 208, 147, 50, 14
     CONTROL "", -25525, "STATIC", SS_ETCHEDHORZ, 7, 170, 251, 1
@@ -48,17 +54,17 @@ FONT 9, "新細明體"
 BEGIN
     GROUPBOX "特殊特性", -1, 7, 7, 245, 52
     AUTORADIOBUTTON "遊戲桿(&J)", IDC_JOYSTICK_RADIO, 17, 23, 55, 10
-    AUTORADIOBUTTON "飛行控制器或飛行杆(&F)", IDC_FLIGHT_YOKE_RADIO, 147, 23, 89, 10
+    AUTORADIOBUTTON "飛行控制器或飛行桿(&F)", IDC_FLIGHT_YOKE_RADIO, 147, 23, 89, 10
     AUTORADIOBUTTON "遊戲手柄(&G)", IDC_GAME_PAD_RADIO, 17, 40, 65, 10
     AUTORADIOBUTTON "作為跑車控制器(&R)", IDC_RACE_CAR_RADIO, 147, 40, 93, 10
     GROUPBOX "軸(&A)", -1, 7, 67, 116, 44, WS_GROUP
     COMBOBOX IDC_AXES_COMBO, 37, 79, 48, 50, CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL
-    AUTORADIOBUTTON "方向舵/腳踏板", IDC_RUDDER_PEDALS_RADIO, 14, 97, 63, 10, NOT WS_VISIBLE
+    AUTORADIOBUTTON "方向舵／腳踏板", IDC_RUDDER_PEDALS_RADIO, 14, 97, 63, 10, NOT WS_VISIBLE
     AUTORADIOBUTTON "Z 軸", IDC_Z_AXIS_RADIO, 81, 97, 35, 10, NOT WS_VISIBLE
     GROUPBOX "按鈕(&B)", -1, 137, 67, 116, 44
     COMBOBOX IDC_BUTTONS_COMBO, 178, 79, 48, 50, CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL, WS_EX_CLIENTEDGE
     AUTOCHECKBOX "包含瞄準鏡頭控制(&P)", IDC_INC_POINT_CHECKBOX, 7, 123, 115, 10
-    LTEXT "控制器名稱(&O):", -1, 7, 139, 200, 9
+    LTEXT "控制器名稱(&O)：", -1, 7, 139, 200, 9
     EDITTEXT IDC_CONTROLLER_NAME_EDIT, 7, 150, 116, 15, ES_AUTOHSCROLL, WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
     DEFPUSHBUTTON "確定", IDOK, 137, 150, 50, 14
     PUSHBUTTON "取消", IDCANCEL, 203, 150, 50, 14
@@ -73,15 +79,15 @@ BEGIN
     ICON IDI_CPLSYSTEM, -1, 7, 24, 20, 20
     DEFPUSHBUTTON "確定", IDOK, 106, 65, 50, 14
     PUSHBUTTON "取消", IDCANCEL, 163, 65, 50, 14
-    LTEXT "選擇同舊程式一齊使用嘅裝置。", -1, 7, 7, 208, 10
-    LTEXT "首選裝置(&P):", -1, 34, 24, 70, 10
+    LTEXT "選擇與舊程式一齊使用的裝置。", -1, 7, 7, 208, 10
+    LTEXT "首選裝置(&P)：", -1, 34, 24, 70, 10
     COMBOBOX IDC_PREFERRED_DEV_COMBO, 34, 38, 179, 75, CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL
 END
 
 STRINGTABLE
 BEGIN
     IDS_CPLSYSTEMNAME "遊戲控制器"
-    IDS_CPLSYSTEMDESCRIPTION "新增、刪除或配置遊戲控制器硬體，例如遊戲桿及遊戲手柄。"
+    IDS_CPLSYSTEMDESCRIPTION "新增、刪除或設定遊戲控制器硬體，例如遊戲桿及遊戲手柄。"
     IDS_CONTROLLER "控制器"
     IDS_STATUS "狀態"
     IDS_NONE "(None)"
