--- a/dll/cpl/liccpa/lang/zh-HK.rc
+++ b/dll/cpl/liccpa/lang/zh-HK.rc
@@ -1,4 +1,9 @@
-/* Traditional Chinese translation by Henry Tang Ih 2016 (henrytang2@hotmail.com) */
+/*
+ * PROJECT:     ReactOS License Manager Control Panel Applet
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -9,7 +14,7 @@ FONT 9, "新細明體"
 BEGIN
     CONTROL "客戶協議類型", 100, "BUTTON", BS_GROUPBOX | WS_CHILD | WS_VISIBLE, 4, 4, 239, 94
     CONTROL "每裝置或每使用者", 102, "BUTTON", BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE, 13, 79, 107, 12
-    CONTROL "每伺服器併發連線數:", 103, "BUTTON", BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE, 13, 38, 163, 9
+    CONTROL "每伺服器併發連線數：", 103, "BUTTON", BS_AUTORADIOBUTTON | WS_CHILD | WS_VISIBLE, 13, 38, 163, 9
     CONTROL "產品:", 105, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 13, 20, 31, 8
     CONTROL "", 106, "COMBOBOX", CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP, 49, 20, 171, 12
     CONTROL "確定", 107, "BUTTON", BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 263, 7, 46, 14
@@ -25,5 +30,5 @@ STRINGTABLE
 BEGIN
     IDS_CPLNAME_1 "許可證管理"
     IDS_CPLDESCRIPTION_1 "許可證管理"
-    IDS_REACTOS "ReactOS - 自由軟體"
+    IDS_REACTOS "ReactOS - 自由軟件"
 END
