--- a/dll/shellext/deskmon/lang/zh-HK.rc
+++ b/dll/shellext/deskmon/lang/zh-HK.rc
@@ -1,4 +1,9 @@
-/* Traditional Chinese translation by Henry Tang Ih 2016 (henrytang2@hotmail.com) */
+/*
+ * PROJECT:     ReactOS Advanced display monitor properties
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -13,9 +18,9 @@ BEGIN
     LISTBOX IDC_MONITORLIST, 40, 13, 196, 30, WS_VSCROLL
     PUSHBUTTON "內容(&P)", IDC_MONITORPROPERTIES, 177, 35, 59, 14, WS_DISABLED
     GROUPBOX "顯示器設定", IDS_MONITORSETTINGSGROUP, 7, 58, 237, 63
-    LTEXT "螢幕重新整理頻率:(&S)", IDS_REFRESHRATELABEL, 13, 73, 225, 8
+    LTEXT "螢幕重新整理頻率(&S)：", IDS_REFRESHRATELABEL, 13, 73, 225, 8
     COMBOBOX IDC_REFRESHRATE, 13, 85, 225, 200, WS_VSCROLL | CBS_DROPDOWNLIST | CBS_SORT
-    AUTOCHECKBOX "隱藏該顯示器無法顯示嘅模式(&H)", IDC_PRUNINGCHECK, 13, 106, 225, 10
+    AUTOCHECKBOX "隱藏該顯示器無法顯示的模式(&H)", IDC_PRUNINGCHECK, 13, 106, 225, 10
 END
 
 STRINGTABLE
