--- a/dll/shellext/mydocs/lang/zh-HK.rc
+++ b/dll/shellext/mydocs/lang/zh-HK.rc
@@ -1,8 +1,13 @@
-// Chinese Traditional (zh-TW) resources by Chan Chilung <eason066@gmail.com> 2021
+/*
+ * PROJECT:     ReactOS Mydocs
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
 STRINGTABLE
 {
-    IDS_NOSRCFILEFOUND "揾唔到檔案或資料夾 '%ls'。"
+    IDS_NOSRCFILEFOUND "找不到檔案或資料夾「%ls」。"
 }
