--- a/dll/shellext/netshell/lang/zh-HK.rc
+++ b/dll/shellext/netshell/lang/zh-HK.rc
@@ -1,10 +1,10 @@
 /*
  * PROJECT:    ReactOS Netshell
- * LICENSE:    GPL - See COPYING in the top level directory
- * FILE:       dll/shellext/netshell/lang/zh-HK.rc
- * PURPOSE:    Chinese (Hong Kong) Language File
- * TRANSLATOR: 2011 Elton Chung aka MfldElton <elton328@gmail.com>
- *             2020 - 2021 Chan Chilung <eason066@gmail.com>
+ * LICENSE:    GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:    Chinese (Hong Kong) resource file
+ * TRANSLATOR: Copyright 2020-2021 Chan Chilung <eason066@gmail.com>
+ * REFERENCE:  Chinese (Traditional) resource translation
+ *             Copyright 2011 Elton Chung <elton328@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
@@ -15,17 +15,17 @@ CAPTION "一般"
 FONT 9, "新細明體"
 BEGIN
     CONTROL "", IDC_COMPONENTSLIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP, 9, 71, 230, 55
-    LTEXT "連接時使用:", -1, 9, 9, 217, 8
+    LTEXT "連接時使用：", -1, 9, 9, 217, 8
     EDITTEXT IDC_NETCARDNAME, 9, 21, 230, 12, WS_BORDER | WS_TABSTOP | ES_READONLY
     PUSHBUTTON "配置(&C)", IDC_CONFIGURE, 189, 38, 50, 14
-    LTEXT "這個連線使用下列元件:", -1, 9, 59, 217, 8
+    LTEXT "這個連線會使用下列已選取的元件：", -1, 9, 59, 217, 8
     PUSHBUTTON "安裝(&I)", IDC_INSTALL, 9, 130, 65, 14, WS_DISABLED | WS_TABSTOP
     PUSHBUTTON "解除安裝(&U)", IDC_UNINSTALL, 90, 130, 65, 14, WS_DISABLED | WS_TABSTOP
     PUSHBUTTON "內容(&P)", IDC_PROPERTIES, 174, 130, 65, 14
     GROUPBOX "描述", -1, 9, 153, 230, 46, BS_GROUPBOX
     LTEXT "元件描述在此處...", IDC_DESCRIPTION, 15, 165, 217, 28, WS_GROUP
     AUTOCHECKBOX "連接後在通知區域顯示圖示", IDC_SHOWTASKBAR, 9, 206, 230, 12, WS_TABSTOP
-    AUTOCHECKBOX "喺依個連線受限制或無連線時通知我(&N)", IDC_NOTIFYNOCONNECTION, 9, 220, 230, 20, BS_MULTILINE | BS_TOP | WS_TABSTOP
+    AUTOCHECKBOX "在這個連線受限制或無連線時通知我(&N)", IDC_NOTIFYNOCONNECTION, 9, 220, 230, 20, BS_MULTILINE | BS_TOP | WS_TABSTOP
 END
 
 IDD_STATUS DIALOGEX 0, 0, 200, 280
@@ -40,15 +40,15 @@ STYLE DS_SHELLFONT | WS_CHILD | WS_CAPTION
 CAPTION "一般"
 FONT 9, "新細明體"
 BEGIN
-    GROUPBOX "連接", -1, 9, 8, 190, 58, BS_GROUPBOX
-    LTEXT "狀態:", -1, 22, 20, 65, 8
+    GROUPBOX "連線", -1, 9, 8, 190, 58, BS_GROUPBOX
+    LTEXT "狀態：", -1, 22, 20, 65, 8
     LTEXT "持續時間:", -1, 22, 34, 65, 8
-    LTEXT "速度:", -1, 22, 48, 65, 8
+    LTEXT "速度：", -1, 22, 48, 65, 8
     GROUPBOX "活動", -1, 9, 74, 190, 70, BS_GROUPBOX
     LTEXT "傳送", -1, 60, 90, 60, 8
     ICON "", IDC_NETSTAT, 110, 85, 32, 32
     RTEXT "接收", -1, 146, 90, 44, 8
-    LTEXT "位元組:", -1, 22, 115, 32, 8
+    LTEXT "位元組：", -1, 22, 115, 32, 8
     LTEXT "000.000.000", IDC_SEND, 60, 115, 44, 8
     RTEXT "000.000.000", IDC_RECEIVED, 146, 115, 44, 8
     PUSHBUTTON "內容(&P)", IDC_STATUS_PROPERTIES, 10, 150, 60, 14
@@ -64,10 +64,10 @@ CAPTION "支援"
 FONT 9, "新細明體"
 BEGIN
     GROUPBOX "連接狀態", -1, 9, 8, 190, 88, BS_GROUPBOX
-    LTEXT "位址類型:", -1, 22, 20, 80, 8
-    LTEXT "IP 位址:", -1, 22, 34, 80, 8
-    LTEXT "子網絡遮罩:", -1, 22, 48, 80, 8
-    LTEXT "預設閘道:", -1, 22, 62, 80, 8
+    LTEXT "位址類型：", -1, 22, 20, 80, 8
+    LTEXT "IP 位址：", -1, 22, 34, 80, 8
+    LTEXT "子網絡遮罩：", -1, 22, 48, 80, 8
+    LTEXT "預設閘道：", -1, 22, 62, 80, 8
     RTEXT "N/A", IDC_DETAILSTYPE, 110, 20, 80, 8
     RTEXT "000.000.000.000", IDC_DETAILSIP, 110, 34, 80, 8
     RTEXT "000.000.000.000", IDC_DETAILSSUBNET, 110, 48, 80, 8
@@ -80,7 +80,7 @@ STYLE DS_SHELLFONT | WS_POPUP | WS_CAPTION | DS_MODALFRAME
 CAPTION "網絡連線詳細資料"
 FONT 9, "新細明體"
 BEGIN
-    LTEXT "網絡連線詳細資料(&D):", -1, 10, 4, 170, 12
+    LTEXT "網絡連線詳細資料(&D)：", -1, 10, 4, 170, 12
     CONTROL "", IDC_DETAILS, "SysListView32", LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP, 10, 15, 170, 130
     PUSHBUTTON "關閉(&C)", IDC_CLOSE, 120, 155, 60, 14
 END
@@ -91,10 +91,10 @@ CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
     ICON IDI_NET_SETUP, IDC_STATIC, 21, 10, 20, 20
-    LTEXT "請問您想使用一般或自訂設定:", IDC_STATIC, 53, 7, 240, 20
+    LTEXT "請問您想使用一般或自訂設定：", IDC_STATIC, 53, 7, 240, 20
     AUTORADIOBUTTON "一般設定", IDC_NETWORK_TYPICAL, 53, 27, 253, 20, WS_TABSTOP | WS_GROUP
     AUTORADIOBUTTON "自訂設定", IDC_NETWORK_CUSTOM, 53, 72, 253, 20, WS_TABSTOP 
-	LTEXT "使用 ReactOS 網絡用户端、ReactOS 網絡檔案和列印共享及具有自動指派位址功能嘅 TCP/IP 傳輸協議來建立網絡連接。", IDC_STATIC, 65, 45, 240, 30
+	LTEXT "使用 ReactOS 網絡用户端、ReactOS 網絡檔案和列印共享及具有自動指派位址功能的 TCP/IP 傳輸協議來建立網絡連線。", IDC_STATIC, 65, 45, 240, 30
     LTEXT "可讓您手動更改網絡元件。", IDC_STATIC, 65, 90, 243, 20
 END
 
@@ -103,9 +103,9 @@ STYLE DS_SHELLFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYS
 CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
-    LTEXT "For Device:", IDC_STATIC, 33, 2, 100, 20
+    LTEXT "裝置對象：", IDC_STATIC, 33, 2, 100, 20
     LTEXT "N/A", IDC_NETWORK_DEVICE, 75, 2, 253, 20
-    LTEXT "Components checked are used by this connection:", IDC_STATIC, 33, 12, 253, 20
+    LTEXT "這個連線會使用下列已選取的元件：", IDC_STATIC, 33, 12, 253, 20
     CONTROL "", IDC_COMPONENT_LIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP, 33, 22, 250, 50
     PUSHBUTTON "安裝(&I)...", IDC_NETWORK_INSTALL, 122, 75, 50, 14, WS_DISABLED | WS_TABSTOP
     PUSHBUTTON "解除安裝(&U)", IDC_NETWORK_UNINSTALL, 177, 75, 50, 14, WS_DISABLED | WS_TABSTOP
@@ -118,13 +118,13 @@ STYLE DS_SHELLFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYS
 CAPTION "ReactOS 安裝程式"
 FONT 9, "新細明體"
 BEGIN
-    LTEXT "您要讓這台電腦成為網域嘅成員嗎？\n\
-(你可向您的網絡管理員取得這方面的資訊。)", IDC_STATIC, 33, 2, 263, 50
-    AUTORADIOBUTTON "否，這台電腦將成為工作羣組嘅成員之一。", IDC_SELECT_WORKGROUP, 33, 32, 253, 20, WS_TABSTOP | WS_GROUP
-    AUTORADIOBUTTON "是，這台電腦將成為網域嘅成員之一。", IDC_SELECT_DOMAIN, 33, 47, 253, 20, WS_TABSTOP
-    LTEXT "工作羣組或網域名稱:", IDC_STATIC, 33, 72, 126, 14
+    LTEXT "您要讓這台電腦成為網域的成員嗎？\n\
+（您可向您的網絡管理員取得這方面的資訊。）", IDC_STATIC, 33, 2, 263, 50
+    AUTORADIOBUTTON "否，這台電腦將成為工作羣組的成員之一。", IDC_SELECT_WORKGROUP, 33, 32, 253, 20, WS_TABSTOP | WS_GROUP
+    AUTORADIOBUTTON "是，這台電腦將成為網域的成員之一。", IDC_SELECT_DOMAIN, 33, 47, 253, 20, WS_TABSTOP
+    LTEXT "工作羣組或網域名稱：", IDC_STATIC, 33, 72, 126, 14
     EDITTEXT IDC_DOMAIN_NAME, 33, 82, 126, 14, WS_VISIBLE | WS_TABSTOP | ES_AUTOHSCROLL
-    LTEXT "注意: 如果依台電腦唔會成為網路嘅一部份、您沒有足夠嘅權限加入網域、或您唔知道要輸入什麼，您應該先選擇加入工作羣組。依啲選項可以喺之後更改。", IDC_STATIC, 33, 107, 263, 50
+    LTEXT "注意：如果這台電腦不會成為網絡的一部份、您沒有足夠的權限加入網域、或您不知道要輸入什麼，您應該先選擇加入工作羣組。這些選項可以在稍後更改。", IDC_STATIC, 33, 107, 263, 50
 END
 
 STRINGTABLE
@@ -162,10 +162,10 @@ BEGIN
     IDS_NET_DELETE "刪除"
     IDS_NET_RENAME "重新命名"
     IDS_NET_PROPERTIES "內容"
-    IDS_FORMAT_BIT "%u Bit/秒"
-    IDS_FORMAT_KBIT "%u KBit/秒"
-    IDS_FORMAT_MBIT "%u MBit/秒"
-    IDS_FORMAT_GBIT "%u GBit/秒"
+    IDS_FORMAT_BIT "%u Bit／秒"
+    IDS_FORMAT_KBIT "%u KBit／秒"
+    IDS_FORMAT_MBIT "%u MBit／秒"
+    IDS_FORMAT_GBIT "%u GBit／秒"
     IDS_DURATION_DAY "%d 天 %s"
     IDS_DURATION_DAYS "%d 天 %s"
     IDS_ASSIGNED_DHCP "由 DHCP 指派"
@@ -175,11 +175,11 @@ END
 STRINGTABLE
 BEGIN
     IDS_NETWORKSETTINGSTITLE "網絡設定"
-    IDS_NETWORKSETTINGSSUBTITLE "安裝用於連接到其他網絡、電腦和互聯網嘅網絡軟體。"
+    IDS_NETWORKSETTINGSSUBTITLE "安裝用於連接到其他網絡、電腦和互聯網的網絡軟件。"
     IDS_NETWORKCOMPONENTTITLE "網絡元件"
-    IDS_NETWORKCOMPONENTSUBTITLE "Determine which networking components are used on your computer. To add new components, click on Install."
+    IDS_NETWORKCOMPONENTSUBTITLE "判斷您的電腦使用了哪些網絡元件。要安裝新的元件，請按［安裝］。"
     IDS_NETWORKDOMAINTITLE "工作羣組或電腦網域"
-    IDS_NETWORKDOMAINSUBTITLE "網域係一組由網路管理員定義嘅電腦羣組。工作羣組係一組共同使用同一個工作羣組名稱的電腦羣組。"
+    IDS_NETWORKDOMAINSUBTITLE "網域是一組由網絡管理員定義的電腦羣組。工作羣組是一組共同使用同一個工作羣組名稱的電腦羣組。"
     IDS_REACTOS_SETUP "ReactOS 安裝程式"
     IDS_WZD_DOMAIN_NAME "除非您輸入網域或工作羣組名稱，\n否則安裝程式無法繼續。"
 END
