--- a/media/themes/Lautus/lautus.msstyles/lang/zh-HK.rc
+++ b/media/themes/Lautus/lautus.msstyles/lang/zh-HK.rc
@@ -1,5 +1,10 @@
-// Chinese Hong Kong (zh-HK) resources by Chan Chilung <eason066@gmail.com> 2021
-
+/*
+ * PROJECT:     ReactOS Lautus Theme
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
+ */
+ 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
 STRINGTABLE
@@ -35,5 +40,5 @@ STRINGTABLE
 5004, "於 2011 年以 GNU/GPL 2.0 條款發行"
 5005, "https://reactos.org/"
 5006, "1.0"
-5007, "ReactOS 嘅視覺樣式"
+5007, "ReactOS 的視覺樣式"
 }
