--- a/media/themes/Lunar/lunar.msstyles/lang/zh-HK.rc
+++ b/media/themes/Lunar/lunar.msstyles/lang/zh-HK.rc
@@ -1,4 +1,9 @@
-// Chinese Hong Kong (zh-HK) resources by Chan Chilung <eason066@gmail.com> 2021
+/*
+ * PROJECT:     ReactOS Lunar Theme
+ * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
+ * PURPOSE:     Chinese (Hong Kong) resource file
+ * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
+ */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_HONGKONG
 
@@ -35,5 +40,5 @@ STRINGTABLE
 5004, "於 2019 年以 GNU/GPL 2.0 條款發行"
 5005, "https://reactos.org/"
 5006, "1.1"
-5007, "ReactOS 嘅視覺樣式"
+5007, "ReactOS 的視覺樣式"
 }
